*Empty MediaWiki Message*

--- a/شفيع_الله_بابرزی.mw
+++ b/شفيع_الله_بابرزی.mw
@@ -13,6 +13,6 @@
 == ادبي ژوند ==
 د ښاغلي بابرزي د شعرونو دوه ټولگې د خيمې سيوري ته او بوره ونه د چاپ په گاڼه پسولل شوي او دوه نورې ټولگې د رنجو غرونه او په کاڼو کې خوبونه د چاپ لارې څاري .
 
-شفيع الله بابرزى دا مهال په کابل کې د يو سيمه ييز ټلويزيون شمشاد د موسيقۍ او هنز د برخې مشري کوي ، که د هغه د شعر ، هنر او ژوندانه په اړه پوښتنه يا نظر لرئ د پروگرام د نشر پر مهال نيغ په نيغه دغې شميرې ته زنگ ووهئ : 
+شفيع الله بابرزى دا مهال په کابل کې د يو سيمه ييز ټلويزيون شمشاد د موسيقۍ او هنز د برخې مشري کوي 
 
 [[وېشنيزه: پښتانه شاعران]]
