--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -88,7 +88,10 @@
 مرحوم خادم دفلسفي اند او علمي شخصيت څښتن و،هغه په رښتيا سره دخپل ولس سره مينه درلوده او دهغه خدمت يي په ډيره خوښۍ سره کاوه. 
 هغه د هر ډول مشكلاتو او سختيو په مقابل كښي د مقاومت، صبر او حوصلې لارښوونه كول . 
 استاد خادم دمعاسرو ادبياتو دهغو پنځو ستوروڅخه وچې دپښتو ادب او کلتور يي ځلولۍ دی ،اوديوه داسي ويښ زلمي په احساس يې دپښتو ادب چوپړ کړۍ چې دنن زلميان يې درناوۍ کوي . 
-مرحوم بينوا صاحب ليکي: {{دوراشې کامه|''ښاغلی قيام الدين خادم په اوسنيو ليکوالو او شاعرانو کې دقدامت او مشرتوب حق لري ،دافغاني پوهانو او اديبانو په لومړۍ ډله کښي دريږې''.|20px|}}
+
+== د نورو نظرونه ==
+د قيام الدين خادم د شخصيت په اړه د افغاني ټولنې يو شمېر پېژندل شوؤ څېرو خپل بېل بېل نظرونه او اندونه څرګند کړي چې ځينې يې په دې توګه دي:
+{{دوراشې کامه|''ښاغلی قيام الدين خادم په اوسنيو ليکوالو او شاعرانو کې دقدامت او مشرتوب حق لري ،دافغاني پوهانو او اديبانو په لومړۍ ډله کښي دريږې''.|20px|}}
 
 ارواښاد کانديد اکاديميسن سر محقق صديق روهي دده په اړه په خپل کتاب دپښتو دادبياتو تاريخ کي ليکي {{دوراشې کامه|''کله چې دويښ زلميانو پر ادبياتو باندي بحث کيږي نو لومړی ځل پاره دحبيبي، الفت ، بينوا ،خادم ، رښتين او رشاد نومونه په ذهن کې تداعي کيږي ،ځکه چې دپشتو دمعياري ژبي ، ليکدود (املأ) او ادبي سبک په پالنه کې ډير ستر خدمتونه تر سره کړي او زيات شاگردان يې روزلي دي .''.|20px|}}  
 لوي استاد ((حبيبي ))او فاضل استاد ((رشاد)) دواړه دادبي او تاريخي څيړنو سر لاري اوپه خپله برخه کښي دتبحر په لحاظ بې ساري دی .محترم استاد پوهاند رښتين هم په گرامر او ادبي تاريخ کې لوي لاس لري . الفت ،بينوا او خادم که څه هم ادبي څيړني تر سره کړي خو هغوي زياتره درښتيا ددورې دنامتو شاعرانو په توگه شهرت لري )) روهي صاحب داهم زياتوي چې {{دوراشې کامه|''خادم صاحب دپښتو او پښتونولۍ اودهيواد له ترقی سره ډيره مينه درلوده،هغه دښو احساساتو خاوند اودلهجې سراحت يې درلود''.|20px|}} 
