--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -91,7 +91,7 @@
 
 == د نورو نظرونه ==
 د قيام الدين خادم د شخصيت په اړه د افغاني ټولنې يو شمېر پېژندل شوؤ څېرو خپل بېل بېل نظرونه او اندونه څرګند کړي چې ځينې يې په دې توګه دي:
-{{دوراشې کامه|''ښاغلی قيام الدين خادم په اوسنيو ليکوالو او شاعرانو کې دقدامت او مشرتوب حق لري ،دافغاني پوهانو او اديبانو په لومړۍ ډله کښي دريږې''.|20px||[[عبدالروف بېنوا]]}}
+{{دوراشې کامه|''ښاغلی قيام الدين خادم په اوسنيو ليکوالو او شاعرانو کې دقدامت او مشرتوب حق لري ،دافغاني پوهانو او اديبانو په لومړۍ ډله کې دريږې''.|20px||[[عبدالروف بېنوا]]}}
 
 {{دوراشې کامه|''کله چې دويښ زلميانو پر ادبياتو باندي بحث کيږي نو لومړی ځل پاره دحبيبي، الفت ، بينوا ،خادم ، رښتين او رشاد نومونه په ذهن کې تداعي کيږي ،ځکه چې دپشتو دمعياري ژبي ، ليکدود (املأ) او ادبي سبک په پالنه کې ډير ستر خدمتونه تر سره کړي او زيات شاگردان يې روزلي دي .''.|20px||''د پښتو د ادبياتو تاريخ'' - د [[محمد صديق روهي]] ليکنه}}
   
