--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -133,5 +133,5 @@
 [http://scprd.com/hdra/view.php?id=23 د ارواښاد مولانا قيام الدين خادم ژوندليک]
 
 [[وېشنيزه: پښتانه]]
-[[وېشنيزه: پښتانه ليکوالان]]
+[[وېشنيزه: پښتانه ليکوال]]
 [[وېشنيزه: پښتانه شاعران]]
