--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -95,16 +95,16 @@
 
 {{دوراشې کامه|''کله چې دويښ زلميانو پر ادبياتو باندي بحث کيږي نو لومړی ځل پاره دحبيبي، الفت ، بينوا ،خادم ، رښتين او رشاد نومونه په ذهن کې تداعي کيږي ،ځکه چې دپشتو دمعياري ژبي ، ليکدود (املأ) او ادبي سبک په پالنه کې ډير ستر خدمتونه تر سره کړي او زيات شاگردان يې روزلي دي .''.|20px||''د پښتو د ادبياتو تاريخ'' - د [[محمد صديق روهي]] ليکنه}}
   
-لوي استاد ((حبيبي ))او فاضل استاد ((رشاد)) دواړه دادبي او تاريخي څيړنو سر لاري اوپه خپله برخه کښي دتبحر په لحاظ بې ساري دی .محترم استاد پوهاند رښتين هم په گرامر او ادبي تاريخ کې لوي لاس لري . الفت ،بينوا او خادم که څه هم ادبي څيړني تر سره کړي خو هغوي زياتره درښتيا ددورې دنامتو شاعرانو په توگه شهرت لري )) 
+[[عبدالحی حبيبي]] او [[عبدالشکور رشاد]] دواړه د ادبي او تاريخي څيړنو سر لاري اوپه خپله برخه کښي دتبحر په لحاظ بې ساري دی. محترم استاد پوهاند رښتين هم په گرامر او ادبي تاريخ کې لوي لاس لري . الفت ،بينوا او خادم که څه هم ادبي څيړني تر سره کړي خو هغوي زياتره درښتيا ددورې دنامتو شاعرانو په توگه شهرت لري 
 {{دوراشې کامه|''خادم صاحب دپښتو او پښتونولۍ اودهيواد له ترقی سره ډيره مينه درلوده،هغه دښو احساساتو خاوند اودلهجې سراحت يې درلود''.|20px||محمد صديق روهي}} 
-استاد خادم په اوسني ليکوالو کې خپل ژوند ليک خپورکړی دی ،په يوه برخه کې يې د(( زما پر حيات انتقادات)) تر سر ليک لاندي داسي ليکلي دي : {{دوراشې کامه|''په ژوندانه کې هيڅوک له انتقاده نه دی خلاص هغه انتقادونه چې په مايي خلک کوي دادي : 
-#وايي نه منونکی سړۍ دی . دا انتقاد په ماباندي زما والدې هم هر وخت کاوه ،مگر زما جواب داو چې که زه منونکی واي خوزه به هم دنورو خلکو غوندي واي . په ورکوټوالي به مي دمور سره تل په دې جنگ و.دې به ويل : خلک داسي کوي اوته داسي،مابه ويل چې : ( خلک راته مه يادوه خلک خو هر حه کوي ! ! ! .)
-#وايي ډير بحث کوي اونه قانع کيږي . . . دا خبره نشم فيصله کولاي چې دادخلکو قصور دی اوکه زماعيب؟ استادان به هم زما پوښتنو ته اريان وو،زه پخپله هم پدې قانع يمچې بحث مي خوښ دی، مگر په اساسي او اصولي خبرو. نه مطلق بحث . . . 
-#وايي ((سر شوخه دي)) مگر دوستان مي وايي ادبي شجاعت لري .په ورکوپوالي کې راته خلکو ويل چي ((کلانکاردی )) ولي په آزادی خو زه په خپله هم قايل يم او دا ځکه چي دا طبعي بار زماپه ورميږ نشته .
+قيام الدين خادم په [[اوسني ليکوال|اوسني ليکوالو]] کې خپل ژوندليک خپور کړی دی، هغه په يوه برخه کې يې د ''زما پر حيات انتقادات'' تر سر ليک لاندې داسې ليکلي دي: {{دوراشې کامه|''په ژوندانه کې هيڅوک له انتقاده نه دی خلاص هغه انتقادونه چې په مايي خلک کوي دادي : 
+#وايي نه منونکی سړۍ دی . دا انتقاد په ماباندي زما والدې هم هر وخت کاوه ،مگر زما جواب داو چې که زه منونکی واي خوزه به هم دنورو خلکو غوندي واي . په ورکوټوالي به مي دمور سره تل په دې جنگ و.دې به ويل : خلک داسي کوي اوته داسي،مابه ويل چې : ( خلک راته مه يادوه خلک خو هر حه کوي!
+#وايي ډير بحث کوي اونه قانع کيږي . . . دا خبره نشم فيصله کولای چې دا د خلکو قصور دی اوکه زما عيب؟ استادان به هم زما پوښتنو ته اريان وو، زه پخپله هم پدې قانع يم چې بحث مي خوښ دی، مګر په اساسي او اصولي خبرو. نه مطلق بحث . . . 
+#وايي سر شوخه دی مگر دوستان مې وايي ادبي شجاعت لري. په ورکوټوالي کې راته خلکو ويل چي کلانکار دی، ولې په آزادی خو زه په خپله هم قايل يم او دا ځکه چي دا طبعي بار زماپه ورميږ نشته.
 #هو، په دي يوه گناه زه پخپله هم قانع يم چې هغه دحقيقت مينه بايد وبولم . 
-خلک په امورو کې دنورو نورو ملاحظاتومراعات کوي ،مگر زه په حقيقت او واقيعت پښې نشم ايښوداي. ما خپل دغه عادت په هغه نظم کې چي (دشاعر مسلک) يي نوم دی شه تصوير کړی دی .
-زه داټولي خبري اورم مگر دځان سره وايم : ((ډيري خولې ډيري خبري ))''.|20px|}}
-روهي صاحب ليکې داپورته ليکنه دخادم صاحب دنثر نمونه هم کيداي شي ؛ دده په نثر کي ايجازليدل کيږي اودځينو ليکوالو په شان دحق الحمې دپاره خبره نه اوږدوي ،بلکه نيغ په نيغه خپل مطلب بيانوي . پاي
+خلک په امورو کې دنورو نورو ملاحظاتومراعات کوي ،مگر زه په حقيقت او واقيعت پښې نشم ايښوداي. ما خپل دغه عادت په هغه نظم کې چي ''د شاعر مسلک'' يي نوم دی ښه تصوير کړی دی.
+زه دا ټولي خبري اورم مگر د ځان سره وايم: ډيري خولې ډيري خبري''.|20px|}}
+روهي صاحب ليکې داپورته ليکنه دخادم صاحب دنثر نمونه هم کيداي شي ؛ دده په نثر کي ايجازليدل کيږي اودځينو ليکوالو په شان دحق الحمې دپاره خبره نه اوږدوي ،بلکه نيغ په نيغه خپل مطلب بيانوي.
 
 == د شعر بېلګه ==
 <center>
