robot  Modifying: [[ur:ابن عربی]]

--- a/ابن_عربي.mw
+++ b/ابن_عربي.mw
@@ -262,4 +262,4 @@ In Urdu, the most authentic translation is supposed to be that of [[Maulvi Abdul
 [[sr:Ибн Араби]]
 [[sv:Ibn 'Arabi]]
 [[tr:Muhyiddin İbn Arabi]]
-[[ur:شیخ اکبر ابن عربی]]
+[[ur:ابن عربی]]
