--- a/قريب_الرحمن_سعيد.mw
+++ b/قريب_الرحمن_سعيد.mw
@@ -10,10 +10,11 @@
 
 == دندې ==
 #د ننګرهاد د ولایت د روداتود ولسوالۍ د احداد په لیسه کې د کیمیا اوریاضې استاد.
-#پر افغانستان کې د روسي پوځ د یرغل پر خلاف د نړېوالو رسنيو سره د اړیکو مسئول.
+#دلیږد په دیار  کې پر افغانستان کې د روسي پوځ د یرغل پر خلاف د نړېوالو رسنيو سره د اړیکو مسئول.
 #د مطبوعاتو او معلوماتو (Press and information) د دفتر عمومې مشر.
 #د هجرت د اردو ژبې مجلي  بنسټ ایښوونکې او مسئول مدیر.
 #د افغان خبرې اژانس (Afghan News Agency  ANA) بنسټ ایښوونکې او عمومې مشر
+#د اوه ګوني یووالي (د افغانستان د مجاهدینو د اسلامي اتحاد) ویاند
 #د روزنیزه او ټولنیزه  مؤسسو او په ځانګړې توګه د مهاجرینو د کوچنیانو د فعالو  سره یو فعاله ونډه اخستونکې.
 #د افغانستان د [[د افغانستان اسلامي حزب|حزب اسلامي]] د اجرائیه شورا غړی ، د دې ګوند د فرهنګي کمیټې مشر او د همدې ګوند ویاند.
 #د افغانستان  د عظمې صدارت د مطبوعاتو  عمومې رئیس او د صدراعظم ویاند.
