--- a/قريب_الرحمن_سعيد.mw
+++ b/قريب_الرحمن_سعيد.mw
@@ -1,6 +1,6 @@
 [[انځور:قريب_الرحمن_سعيد.JPG|thumb|289px|قريب الرحمن سعيد]]
 
-'''قريب الرحمن سعيد''' (۲۰ د جون ۱۹۵۲) [[د ننګرهار ولايت]] يو پښتون ژورنالست، ليکوال او ژباړونکی دی. هغه په [[افغانستان]] کې دننه او د افغانستان نه دباندې په افغاني رسنيو کې منظمې ليکنې هم خپرې کړي او د نورو ژبو نه يې يو شمېر کتابونه هم پښتو ژبې ته ژباړلي دي.
+'''قريب الرحمن سعيد''' (۲۰ د جون ۱۹۵۲) يو پېژندل شوی افغان ژورنالست، ليکوال، ژباړونکی او د افغان خبري آژانس بنسټ ايښودونکی دی. هغه په [[افغانستان]] کې دننه او د افغانستان نه دباندې په افغاني رسنيو کې منظمې ليکنې خپروي او د نورو ژبو نه يې يو شمېر کتابونه پښتو ژبې ته ژباړلي دي.
 
 == مخينه ==
 د قريب الرحمن سعيد پخوانی تخلص مولوي زاده ؤ چې د جهاد په وختونو کې يې سعيد غوره کړی. هغه د مولوي ګل رحمن ديوبندي زوی دی. نوموړی د افغانستان د ننګرهار ولايت د [[د روداتو ولسوالۍ|روداتو]] د ولسوالۍ په شارسول کلي کې زېږېدلی دی. د نوموړي پلار [[مولوي ګل رحمن ديوبندي]] د خپل وخت يو لوی عالم، ښه ليکوال او شاعر ؤ. 
@@ -41,7 +41,8 @@
 == باندنۍ تړنې ==
 *[http://larawbar.com/data/library/religious/qr.saeed_seerat_u_nabi/qr.saeed_seerat_u_nabi.htm د انقلاب حکمت] - د لر او بر د وېبپانې برېښنايي کتابتون
 *[http://www.larawbar.net/detail.php?id=5764  د سلطان صلاح الدين ايوبي د وخت ريښتوني پېښي] - د لر او بر د وېبپانې برېښنايي کتابتون
-
+*اسلامي سیاست – ددعوت دازادو مطبوعاتو بریښنایې کتابتون
+*د نبوت پای – د بینوا بریښنایې کتابتون
 
 
 [[وېشنيزه:پښتانه]]
