--- a/قريب_الرحمن_سعيد.mw
+++ b/قريب_الرحمن_سعيد.mw
@@ -9,14 +9,14 @@
 خپلې لومړنۍ زده کړې يې د روداتو د ولسوالۍ د احداد په لومړني او منځني ښوونځي کې سر ته رسولي بيا د ننګرهار ليسې نه يې د ۱۲ ټولګي بريليک اخيستی. د لوړو زده کړو پيل يې [[د کابل پوهنتون|د کابل په پوهنتون]] کې د ساينس فاکولتې د [[کيميا]] او [[شمېرپوهنه|شمېرپوهنې]] په څانګه کې کړی چې په ۱۹۷۵ ز. کال کې له همدغې پوهنځي نه بريالی راوتلی. تر دې وروسته په ۱۹۸۴ ز. کال کې يې د لندند په سټي يونېورسټي (د لندن د ښار پوهنتون) کې د ژورناليزم ۸ اونيزه کورس بشپړ کړی چې په دې څانګه کې يې د ماسټرۍ تر کچې کورسونه لوستي دي. په ۲۰۰۸ ز. کال کې په ناروې کې [[د اوسلو پوهنتون|د اوسلو په پوهنتون]] کې د ټولنيزو پوهنو د پوهنځي څخه د سياسي او ټولنيز اقتصاد دوهم ليسانس ترلاسه کړی او دم مهال په همدې څانګه کې خپل د ماسټرۍ د بريليک په لاس ته راوړلو بوخت دی. 
 
 == دندې ==
-#د ننګرهاد د ولایت د روداتود ولسوالۍ د احداد په لیسه کې د کیمیا اوریاضې استاد.
-#دلیږد په دیار  کې پر افغانستان کې د روسي پوځ د یرغل پر خلاف د نړېوالو رسنيو سره د اړیکو مسئول.
+#د ننګرهار د ولایت د روداتو د ولسوالۍ د احداد په لیسه کې د کیمیا او ریاضې استاد.
+#د لیږد په دیار کې پر افغانستان کې د روسي پوځ د یرغل پر خلاف د نړېوالو رسنيو سره د اړیکو مسئول.
 #د مطبوعاتو او معلوماتو (Press and information) د دفتر عمومې مشر.
 #د هجرت د اردو ژبې مجلي  بنسټ ایښوونکې او مسئول مدیر.
 #د افغان خبرې اژانس (Afghan News Agency  ANA) بنسټ ایښوونکې او عمومې مشر
 #د اوه ګوني یووالي (د افغانستان د مجاهدینو د اسلامي اتحاد) ویاند
 #د کډوالۍ په مهال، په روزنیزه او ټولنیزه مؤسسو کې د مهاجرو ماشومانو د فعالولو په چار کې یو فعاله ونډه اخستونکې.
-#د افغانستان د [[د افغانستان اسلامي حزب|حزب اسلامي]] د اجرائیه شورا غړی ، د دې ګوند د فرهنګي کمیټې مشر او د همدې ګوند ویاند.
+#د افغانستان د [[د افغانستان اسلامي حزب|حزب اسلامي]] د اجرائیه شورا غړی، د دې ګوند د فرهنګي کمیټې مشر او د همدې ګوند ویاند.
 #د افغانستان  د عظمې صدارت د مطبوعاتو  عمومې رئیس او د صدراعظم ویاند.
 #د اطلاعاتو او کلتور د وزارت د کمیسیون رئیس او د دغه وزارت سرپرست وزیر.
 
