--- a/قريب_الرحمن_سعيد.mw
+++ b/قريب_الرحمن_سعيد.mw
@@ -42,7 +42,7 @@
 *[http://larawbar.com/data/library/religious/qr.saeed_seerat_u_nabi/qr.saeed_seerat_u_nabi.htm د انقلاب حکمت] - د لر او بر د وېبپانې برېښنايي کتابتون
 *[http://www.larawbar.net/detail.php?id=5764  د سلطان صلاح الدين ايوبي د وخت ريښتوني پېښي] - د لر او بر د وېبپانې برېښنايي کتابتون
 *[http://www.dawatfreemedia.org/pdf%20files/Isalami%20syasat%201.pdf اسلامي سیاست] – ددعوت دازادو مطبوعاتو بریښنایې کتابتون
-*د نبوت پای – د بینوا بریښنایې کتابتون
+*[http://www.benawa.com/kandahar/library/islam/khatam-ul-nabowat/ د نبوت پای] – د بینوا بریښنایې کتابتون
 
 
 [[وېشنيزه:پښتانه]]
