--- a/قريب_الرحمن_سعيد.mw
+++ b/قريب_الرحمن_سعيد.mw
@@ -15,7 +15,7 @@
 #د هجرت د اردو ژبې مجلي  بنسټ ایښوونکې او مسئول مدیر.
 #د افغان خبرې اژانس (Afghan News Agency  ANA) بنسټ ایښوونکې او عمومې مشر
 #د اوه ګوني یووالي (د افغانستان د مجاهدینو د اسلامي اتحاد) ویاند
-#د کډوالۍ په مهال، په روزنیزه او ټولنیزه مؤسسو کې د مهاجرو ماشومانو د فعالولو په چار کې یو فعاله ونډه اخستونکې.
+#د کډوالۍ پر مهال، په روزنیزه او ټولنیزه مؤسسو کې د مهاجرو ماشومانو د فعالولو په چار کې یو فعاله ونډه اخستونکې.
 #د افغانستان د [[د افغانستان اسلامي حزب|حزب اسلامي]] د اجرائیه شورا غړی، د دې ګوند د فرهنګي کمیټې مشر او د همدې ګوند ویاند.
 #د افغانستان  د عظمې صدارت د مطبوعاتو  عمومې رئیس او د صدراعظم ویاند.
 #د اطلاعاتو او کلتور د وزارت د کمیسیون رئیس او د دغه وزارت سرپرست وزیر.
