--- a/آخون_دروېزه.mw
+++ b/آخون_دروېزه.mw
@@ -3,3 +3,5 @@
 د پلار نوم يې ګدايي د نيکه نوم يې سعدي د ورنيکه نوم يې احمد د غورنيکه نوم يې مته معروف په درغان و چې هغه بيا د جيون زوی او د جنتی لمسی و، دی د خپل دی نيکه په باب ليکي چې «انساب او از قدما برانند که به مردم ترک باز مېګردد».
 
 [[وېشنيزه:د افغانستان نوميالي]]
+[[وېشنيزه:افغاني ليکوال]]
+[[وېشنيزه:پښتانه ليکوال]]
