--- a/ابو_حنيفه_(امام_اعظم).mw
+++ b/ابو_حنيفه_(امام_اعظم).mw
@@ -208,32 +208,27 @@ Image:imamabuhanifah(large).jpg|Book About Imam Abu Hanifa
 
 
 
-[[Category:۶۹۹زوکړې]]
-[[Category:۷۶۷ مړینې]]
-
-
+[[وېشنيزه:د ۶۹۹ زوکړې]]
+[[وېشنيزه:د ۷۶۷ مړینې]]
+[[وېشنيزه:افغانان]]
+[[وېشنيزه:افغاني ليکوال]]
 [[وېشنيزه:څلور امامان]]
 [[وېشنيزه:لس اسلامي مذهبونه]]
 [[وېشنيزه:د مذهب بنسټ اېښودونکې]]
-[[وېشنيزه:حنفي مذهب بنسټ اېښودونکې]]
-[[وېشنيزه:حنفي مذهب پوهان]]
+[[وېشنيزه:د حنفي مذهب بنسټ اېښودونکې]]
+[[وېشنيزه:د حنفي مذهب پوهان]]
+[[وېشنيزه:حنفي]]
+[[وېشنيزه:سني امامان]]
+[[وېشنيزه:سني مسلمانان]]
+[[وېشنيزه:مسلمان پوهان]]
+[[وېشنيزه:سني مسلمان پوهان]]
+[[وېشنيزه:اسلامی پوهان]]
+[[وېشنيزه:د اسلام مسلمان پوهان]]
+[[وېشنيزه:د اسلام سنی مسلمان پوهان]]
+[[وېشنيزه:مسلمان فقها]]
+[[وېشنيزه:تبع تابعین]]
+[[وېشنيزه:څلور امامان]]
 
-[[Category:حنفي]]
-[[Category:سني امامان]]
-[[Category:سني مسلمانان]]
-[[Category:مسلمان پوهان]]
-[[Category:سني مسلمان پوهان]]
-[[Category:اسلامی پوهان]]
-[[Category:د اسلام مسلمان پوهان]]
-[[Category:د اسلام سنی مسلمان پوهان]]
-[[Category:مسلمان فقها]]
-[[Category:تبع تابعین]]
-
-[[category:څلور امامان]]
-[[category:لس اسلامي مذهبونه]]
-[[category:د مذهب بنسټ اېښودونکې]]
-[[category:حنفي مذهب بنسټ اېښودونکې]]
-[[category:حنفي مذهب پوهان]]
 
 [[ar:أبو حنيفة النعمان]]
 [[ca:Abu Hanifa]]
