/* د شعر يوه بېلګه */

--- a/اجمل_خټک.mw
+++ b/اجمل_خټک.mw
@@ -29,5 +29,6 @@
 
 
 
-[[وېشنيزه: پښتانه شاعران]]
-[[وېشنيزه:پښتانه ليکوالان]]
+[[وېشنيزه:پښتانه شاعران]]
+[[وېشنيزه:پښتانه ليکوال]]
+[[وېشنيزه:پښتانه]]
