--- a/پير_روښان.mw
+++ b/پير_روښان.mw
@@ -14,6 +14,6 @@
 
 
 [[وېشنيزه:د افغانستان نوميالي]]
-[[وېشنيزه:پښتانه ليکوالان]]
+[[وېشنيزه:پښتانه ليکوال]]
 [[وېشنيزه:پښتانه شاعران]]
 [[وېشنيزه:پښتانه]]
