--- a/جان_محمد_زاهد_احمدزى.mw
+++ b/جان_محمد_زاهد_احمدزى.mw
@@ -52,4 +52,12 @@
 **د [[حج]] او [[عمرې]] مساېل
 **صحيح [[عقيده]]
 
-== '''اخښزليك''' ==
+== سرچينې ==
+
+
+
+
+
+[[وېشنيزه:پښتانه شاعران]]
+[[وېشنيزه:پښتانه ليکوال]]
+[[وېشنيزه:پښتانه]
