--- a/جان_محمد_زاهد_احمدزى.mw
+++ b/جان_محمد_زاهد_احمدزى.mw
@@ -60,6 +60,6 @@
 
 [[وېشنيزه:پښتانه شاعران]]
 [[وېشنيزه:پښتانه ليکوال]]
-[[وېشنيزه:پښتانه]
+[[وېشنيزه:پښتانه]]
 [[وېشنيزه:افغانان]]
 [[وېشنيزه:افغاني ليکوال]]
