/* د شعر يوه بېلګه */

--- a/سعدالدين_شپون.mw
+++ b/سعدالدين_شپون.mw
@@ -52,4 +52,7 @@
 
 
 [[وېشنيزه: پښتانه شاعران]]
-[[وېشنيزه: پښتانه ليکوالان]]
+[[وېشنيزه: پښتانه ليکوال]]
+[[وېشنيزه: پښتانه]]
+[[وېشنيزه: افغاني ليکوال]]
+[[وېشنيزه: افغانان]]
