--- a/سيد_مير_مهدي_شاه_مهدي.mw
+++ b/سيد_مير_مهدي_شاه_مهدي.mw
@@ -2,5 +2,6 @@
 يو ليکوال خو ځکه وايي: مهدي صيب په پښتو ادب کې څه نوی يا ګمنامه هستي نه ده. بلکې د يو شاعر، اديب، مقرر، افسانه لیکونکی، ډرامه ليکونکی او صحافي (ژورناليست) په څېر په درسته پښتونخوا کې د ځلانده حېثيت څښتن دی. د آزادی په تحريکونو کې يې تودې برخې اخيستي دي. په پښتو له سره تېر دی. د پښتون د قوم هسک بېرغ سرنګون نه غواړي. له دې کبله د خپل پلار په څېر يې ډېر ځلې بندي خانې سره پت پاللی دی.<br>
 مهدي د صحافت او ژورناليزم په هغه نهضت کې هم د پوره ونډې لرونکی و چې د پښتو د سياسي بېدارۍ لپاره او د پښتو ادبي بهير د پياوړتيا لپاره يې پرله پسې هڅې کولې. دا د ملي جرايدو او مجلو هغه لړۍ وه چې د سياسي اهدافو تر څنګ يې معاصر پښتو ادبي بهير ته نه ستړې کېدونکي خدمتونه وکړل. په حقيقت کې د همدغو مجلو له لارې د پښتونخوا معاصر ادبي نهضت پياوړتيا پيدا کړه او په خلکو کې يې پراخ نفوذ وکړ.
 
-[[وېشنيزه:پښتانه شاعران]]
-[[وېشنيزه:پښتانه ليکوالان]]
+[[وېشنيزه: پښتانه شاعران]]
+[[وېشنيزه: پښتانه ليکوال]]
+[[وېشنيزه: پښتانه]]
