/* دشعر نمونه یې */

--- a/مولوي_گل_رحمن_ديوبندي.mw
+++ b/مولوي_گل_رحمن_ديوبندي.mw
@@ -41,3 +41,12 @@
 یومحمد ص  دې  چې رهبر  د ټول  جهان  دې
 
 اې ګل رحمانه  موعند  ته به دا څه  معلوم  شي
+
+
+
+
+[[وېشنيزه:پښتانه]]
+[[وېشنيزه:پښتانه شاعران]]
+[[وېشنيزه:پښتانه ليکوال]]
+[[وېشنيزه:افغانان]]
+[[وېشنيزه:افغاني ليکوال]]
