--- a/مولوي_گل_رحمن_ديوبندي.mw
+++ b/مولوي_گل_رحمن_ديوبندي.mw
@@ -27,7 +27,8 @@
 == ليکنې ==
 مولوي ګلر حمن  دیوبندې  ددینې او فلسفي  علومو  تر څنګ  ښه تکړه  لیکوال  او شاعر  هم و. خپلې زیاتې لیکنې به یې ،چې د ادبي  او دیني  قصو په  څیر ترتیبولې ، د هغه وخت  د ننګرهار  ورځپاڼې ته لیږلي.  د ښاغلي مولوي ګل رحمن د اشعارو  ټوله    چې  په  یوه ستر کتابچه کې یې  پخپله  لیکلي وو   هلته په روداتو کې د کور  دبمباریدو  او  ورانیدو  ورسته  بې درکه  شوې .  خو هغه خپل  دهجرت  او لیږد  ژوند  د مجاهدینو په خدمت  او دهغوې د پوښتنو په ځوابولو  کې تیر کړ   او  په دې  هکله یې د سنګر دمفتي  (مفتي سنګر)  ترنامه  دوه  ټوکه  کتابونه په دواړو پښتو او دري  ژبو  ولیکل   چې  ډیر زیات   د مجاهدینو او مهاجرینو  په  منځ  کې  خپاره کړل  شول.
 
-ښاغلې مولوي ګلرحمن  دیوبندې  هملته د هجرت  په دیار کې  په  ۱۹۹۶زیږدیز کال د اپریل د میاشتې په ۲۷مه د ورپیښې ناروغۍ  له امله  ددې فانې  نړۍ د ژوند څخه سترګې  پټې کړې  او  د الله ج  درحمت  غیږې ته ورستون شو.  اوبیا  دهغه د دینې وصیت  سره  سم هملته د هجرت په دیار کې  خاورو ته  وسپارل  شو.
+== مړپنه ==
+مولوي ګلرحمن  دیوبندې  هملته د هجرت  په دیار کې  په  ۱۹۹۶زیږدیز کال د اپریل د میاشتې په ۲۷مه د ورپیښې ناروغۍ  له امله  ددې فانې  نړۍ د ژوند څخه سترګې  پټې کړې  او  د الله ج  درحمت  غیږې ته ورستون شو.  اوبیا  دهغه د دینې وصیت  سره  سم هملته د هجرت په دیار کې  خاورو ته  وسپارل  شو.
 
 == دشعر نمونه یې ==
 شات خواږه دي  خو مریض ته به دا  څه معلوم شي
