--- a/عبدالروف_بېنوا.mw
+++ b/عبدالروف_بېنوا.mw
@@ -193,8 +193,7 @@ ROW # 7       /    GRAVE # 5
 === يادونه ===
 د يادولو وړ ده چي تر اوسه چي زما لاس ته کم ماخذونه او مواد راغلي دي نو دادئ تر  ٥٩ شمېرې پوري مي د استاد بېنوا اثار معرفي کړله ، خو ښائې د اروا ښاد بېنوا به نور چاپي او نا چاپ اثار هم  وي  ځکه په دې وروستيو ورځو کي د هغه د مېنځوي ځوی  ښاغلي خوشحال بېنوا څخه په تر لاسه سوي  ليکنو کي ارواښاد بېنوا په خپل قلم ليکلي دي چي تر ٦٠ زيات کتابونه ئې ليکلي ، ژباړلي او تدوين کړي دي خو ماته  د هغو په اړه   مالومات نشته .         
 
-ليکوال  ٭٭  پتيال
 
 
 [[وېشنيزه: پښتانه شاعران]]
-[[وېشنيزه: پښتانه ليکوالان]]
+[[وېشنيزه: پښتانه ليکوال]]
