--- a/غرزی_خواخوږی.mw
+++ b/غرزی_خواخوږی.mw
@@ -26,6 +26,6 @@
 #په ورځپاڼو او مجلو کي يو شمير مقالي او مضامين
 
 
-[[وېشنيزه:پښتانه ليکوالان]]
+[[وېشنيزه:پښتانه ليکوال]]
 [[وېشنيزه:سياستوال]]
 [[وېشنيزه:افغانان]]
