--- a/محمد_گل_نوري.mw
+++ b/محمد_گل_نوري.mw
@@ -28,24 +28,23 @@
 == ادبي هڅې او لاسته راوړنې ==
 دى به چې د خپلې دندې له مخې كله- كله نورو ولسواليو، ليريو پرتو سيمو او كليو ته ورته، نو هورې به يې له خلكو څخه متلونه، سندرې او لغات راټولول، چې په زرګونو متلونه، سندرې، فولكلوري مواد او نوره ولسي پانګه راټوله كړه، دغه راز يې له ليريو پرتو سيمو څخه يوولس ټوكه هغه دېوانونه هم راټول كړل، چې پر هغه مهال يې په وړيا توګه انجمن ته وړاندې كړل: 
 
-*** د محمد امان دېوان.
-*** د محشور د كلي د باركزي حاجي جمعه دېوان. 
-*** د عبدالله پوپلزي دېوان. 
-*** د عبدالنبي بېټني دېوان.
-***  د ملا شېر محمد هوتك دېوان. 
-***  د ملا يار محمد دېوان (دوه ټوكه او يوه پښتو ميراثنامه، په نظم كې.
-***  د حنان دېوان.
-***  د عبدالعزيز قرقدان دېوان.
-***  د كريم داد دېوان (د اخند دروېزه زوى.
-*** قلمي تجويد (د ملا باز محمد شاعر.
-***  د پښتو انشاء (دوه ټوكه.
+* د محمد امان دېوان.
+* د محشور د كلي د باركزي حاجي جمعه دېوان. 
+* د عبدالله پوپلزي دېوان. 
+* د عبدالنبي بېټني دېوان.
+* د ملا شېر محمد هوتك دېوان. 
+* د ملا يار محمد دېوان (دوه ټوكه او يوه پښتو ميراثنامه، په نظم كې.
+* د حنان دېوان.
+* د عبدالعزيز قرقدان دېوان.
+* د كريم داد دېوان (د اخند دروېزه زوى.
+* قلمي تجويد (د ملا باز محمد شاعر.
+* د پښتو انشاء (دوه ټوكه.
 
 كه څه هم ارواښاد نوري كولاى شول چې دا دېوانونه په لوړه بيه پر پښتو ټولنې، كومې خپرندويې ټولنې، يا هم بل ارګان وپلوري، يا يې هم د ځينو اوسمهالو ليكوالو په څېر په خپلو الماريو كې كولپ كړي، خو ده د خپل ملي احساس له مخې دغه ټول موندل شوي اثار ولس او ملت ته وړاندې كړل، چې بله ورځ د ده له مړينې سره سم د وركاوي له ګواښ سره مخ نه شي، يا هم د طبيعي افتونو او پېښو ښكار نه شي. 
 د پښتو ادبياتو په بداېينه او رغاونه كې د استاد لاس
 ده په پښتو فولكلور كې دومره اساسي كارونه كړي، چې پښتو متلونه، پښتو اصطلاحات، محاورې، سندرې، لوبې، نومونې او نكلونه يې ټول په جلا- جلا اثارو كې راټول كړي، همدغه اثار يې په شوروي، المان، انګلستان، هند، فرانسه، جاپان، چين او نورو هېوادونو كې د پوهنيزو او څېړنيزو موسسو تر كار لاندې راغلي او د معتبرو سرچينو په توګه كارول شوي دي. 
 د [[كندهار]] مجلې په پرله پسې 143 مه ګڼه كې، چې د 1351ل كال د زمري مياشت ګڼه كېږي، په شپږم مخ كې يې له ارواښاد محمد ګل نوري سره رحمت الله مړوند يوه مركه كړې، چې استاد نوري د خپل زړګي ټول بړاس ايستلى او د يوې پوښتنې په ځواب كې يې ويلي دي: 
 ?تر اوسه پورې د ځان لپاره يوه سرپناه هم نه لرم او كډه په شا ګرځم?. دا دى د يوه هېواد هغه نامتو فولكلوريسټ چې پر افغانستان سربېره يې د نړۍ په زياتو هېوادونو كې خلك مني او كارونه يې ارزښت لري. كه چېرې دغه ډول بله سټه په بل هېواد كې واى، ښايي په ژوندوني به يې ځينې واټونه د هغه په نوم نومول او ان چې اكاډمۍ به يې هم د هغه په نامه جوړولې، موږ وينو چې هغه كه له يوې خوا دا تمه نه درلوده، له بلې خوا يې پر زياتو خواريو سربېره خپله هڅه او هاند نه دى پرې ايښى.
-
 
 == د استاد ترټولو خوږه خاطره ==
 استاد ته چا، پر چاپ شويو كتابونو يوه انه هم نه ده وركړې، ده په دې برخه كې له مزد او حق الزحمې پرته د خپل ولس خدمت ته ملا تړلې؛ ده په خپله همدغه مركه كې وړاندې د خپلو خوږو خاطرو په لړ كې تر ټولو خوږه او نه هېرېدونكې خاطره دا ګڼي چې په 1318 ل كال كې يې د پښتو ټولنې له خوا لومړنى كتاب "ليك ښوونكى" په دوو ټوكو كې چاپ شو. 
