--- a/محمد_گل_نوري.mw
+++ b/محمد_گل_نوري.mw
@@ -175,3 +175,11 @@
 *4. [[كندهار]] مجله: پر له پسې 164 مه ګڼه، 1352 ل كال، د ليندۍ مياشت، د استاد محمد ابراهيم عطايي ليكنه. 
 *5. [[كندهار]] مجله: پر له پسې 134 مه ګڼه، 19 مخ.
 * د پښتو ادبياتو تاريخ اوسنۍ دوره، ليكوال: پوهاند ډاكټر زېور الدين زېور، چاپ كال: ۱۳۸۵ل هـ.
+
+
+
+
+[[وېشنيزه:پښتانه]]
+[[وېشنيزه:پښتانه ليکوال]]
+[[وېشنيزه:افغاني ليکوال]]
+[[وېشنيزه:افغانان]]
