*Empty MediaWiki Message*

--- a/مبارز_ساپی.mw
+++ b/مبارز_ساپی.mw
@@ -8,5 +8,8 @@
 #دین ژبه او ملت : (په دریـو بـرخو کښې چې دوه برخې ئې څیړنـیز نـثر اودریمه برخه ئې اشعار دی )
 #کاوون او کډوالۍ : اوله برخه قیصه او دوهمه برخه ئې شعرونه
 
-[[Category: پښتانه شاعران]]
-[[Category: پښتانه ليکوالان]]
+
+[[وېشنيزه:پښتانه]]
+[[وېشنيزه:پښتانه ليکوال]]
+[[وېشنيزه:افغاني ليکوال]]
+[[وېشنيزه:افغانان]]
