--- a/منهاج_الدين_گهيځ.mw
+++ b/منهاج_الدين_گهيځ.mw
@@ -33,7 +33,7 @@
 
 == '''اخځليكونه''' ==
 
-[[وېشنيزه:پښتانه ليکوالان]]
+[[وېشنيزه:پښتانه ليکوال]]
 [[وېشنيزه:پښتانه شاعران]]
 [[وېشنيزه:پښتانه]]
 [[وېشنيزه:افغانان]]
