/* د شعر يوه بېلګه */

--- a/محمد_حسن_حقيار.mw
+++ b/محمد_حسن_حقيار.mw
@@ -87,4 +87,8 @@
 ١٣٨٢  -٦-١٤
 
 [[وېشنيزه: پښتانه شاعران]]
-[[وېشنيزه: پښتانه ليکوالان]]
+
+[[وېشنيزه:پښتانه]]
+[[وېشنيزه:پښتانه ليکوال]]
+[[وېشنيزه:افغاني ليکوال]]
+[[وېشنيزه:افغانان]]
