--- a/محمد_ابراهيم_خواخوږى.mw
+++ b/محمد_ابراهيم_خواخوږى.mw
@@ -123,6 +123,9 @@
 ياد يې تل اروا يې ښاده
 
 
-[[وېشنيزه:پښتانه ليکوالان]]
+
 [[وېشنيزه:پښتانه شاعران]]
+[[وېشنيزه:پښتانه]]
+[[وېشنيزه:پښتانه ليکوال]]
+[[وېشنيزه:افغاني ليکوال]]
 [[وېشنيزه:افغانان]]
