--- a/مجاور_احمد_زيار.mw
+++ b/مجاور_احمد_زيار.mw
@@ -78,6 +78,9 @@
 == باندنۍ تړنې ==
 [http://www.zyar.net/ د مجاور احمد زيار وېبپاڼه]
 
-[[وېشنيزه: پښتانه شاعران]]
-[[وېشنيزه: پښتانه ليکوالان]]
-[[وېشنيزه: پښتانه]]
+
+[[وېشنيزه:پښتانه شاعران]]
+[[وېشنيزه:پښتانه]]
+[[وېشنيزه:پښتانه ليکوال]]
+[[وېشنيزه:افغاني ليکوال]]
+[[وېشنيزه:افغانان]]
