--- a/نجيب_منلی.mw
+++ b/نجيب_منلی.mw
@@ -73,4 +73,9 @@
 به يې دانه وانه کړي؟
 
 
-[[Category: پښتانه شاعران]]
+
+[[وېشنيزه:پښتانه شاعران]]
+[[وېشنيزه:پښتانه]]
+[[وېشنيزه:پښتانه ليکوال]]
+[[وېشنيزه:افغاني ليکوال]]
+[[وېشنيزه:افغانان]]
