--- a/نورالبشر_نويد.mw
+++ b/نورالبشر_نويد.mw
@@ -15,6 +15,6 @@
 
 == د شعر بېلګه ==
 
-[[وېشنيزه: پښتانه ليکوالان]]
+[[وېشنيزه: پښتانه ليکوال]]
 [[وېشنيزه: پښتانه شاعران]]
 [[وېشنيزه: پښتانه ډرامه ليکونکي]]
