--- a/نصیر_ستوری.mw
+++ b/نصیر_ستوری.mw
@@ -13,6 +13,6 @@
 
 [[وېشنيزه:افغان خبريالان]]
 [[Category: پښتانه خبريالان]]
-[[Category: پښتانه ليکوالان]]
+[[Category: پښتانه ليکوال]]
 [[وېشنيزه:افغانان]]
 [[وېشنيزه:پښتانه]]
