--- a/محمد_انعام_واک.mw
+++ b/محمد_انعام_واک.mw
@@ -98,7 +98,7 @@
 
 === سيمينارونه ===
 
-ښاغلي واک صاحب د ( ١٩٨٣څخه  تر ٢٠٠٥ )  کال پوري په هيواد کي دننه او بهر په يو شمېر علمي سيمينارونو کي د ګډون تر څنګ په ناروې کي د دوو علمي سيمينارونو جوړونکی دی : 
+ښاغلي واک  د ( ١٩٨٣څخه  تر ٢٠٠٥ )  کال پوري په هيواد کي دننه او بهر په يو شمېر علمي سيمينارونو کي د ګډون تر څنګ په ناروې کي د دوو علمي سيمينارونو جوړونکی دی : 
 
 ١ _ په افغانستان کي دسولي او دموکراسۍ لرليد ( د ٢٠٠٣ زېږديز کال د سپټمبر اتمه نېټۀ  - ناروې ) 
 
