/* د شعر يوه بېلګه يې */

--- a/محمد_انعام_واک.mw
+++ b/محمد_انعام_واک.mw
@@ -203,3 +203,7 @@
 بندر بوشهر – ايران
 
 [[وېشنيزه: پښتانه شاعران]]
+[[وېشنيزه:پښتانه ليکوال]]
+[[وېشنيزه:پښتانه]]
+[[وېشنيزه:افغانان]]
+[[وېښنيزه:افغاني ليکوال]]
