/* چاپ شوي آثار */

--- a/حبيب_الله_غمخور.mw
+++ b/حبيب_الله_غمخور.mw
@@ -34,7 +34,7 @@
 په فارغ وخت کي په فرهنگې کارونو مصروف دی او ليکنې کوي.
 
 == چاپ شوي آثار ==
-تر اوسه یې لومړۍ کتاب د((ډيورنډ کرښه يادناسور زخم)) په نامه چاپ ته د چمتو کولو په حالت کې دۍ ، چې فعلأ دبينوا ويب پاڼې په برېښنايي کتابتون کې پروت دی. دنړۍ او افغانستان په مطبوعاتو کې یې تر ((۱۰۰)) زياتې مقالې خپرې شوې دي  . 
+تر اوسه یې لومړۍ کتاب د ډيورنډ کرښه يا د ناسور زخم په نامه چاپ ته د چمتو کولو په حالت کې دۍ ، چې فعلأ دبينوا ويب پاڼې په برېښنايي کتابتون کې پروت دی. دنړۍ او افغانستان په مطبوعاتو کې یې تر ۱۰۰ زياتې مقالې خپرې شوې دي. 
 
 پښتو یې مورنۍ ژبه ده په دري او روسي ژبو روانې خبرې او ژباړنې کوي او  په سويډني  ژبه کې هم ښه  لاس رسې لري.
 
