--- a/محمد_گل_نوري.mw
+++ b/محمد_گل_نوري.mw
@@ -5,10 +5,11 @@
 
 
 == زوكړه ==
+د صالح محمد صالح ليكنه
+
 
 دى په 1279ل كال په [[كندهار]] كې زېږېدلى دى؛ هغه مهال خو دومره د زده كړې امكانات هم هر چا ته برابر نه وو، خو ارواښاد نوري وكړاى شول، چې د سيمه ييزو پوهانو او كورنيو مشرانو په مرسته زده كړه وكړي، د خپل ځانګړي استعداد او وړتيا په بركت يې ډېر څه په ذهن كې پاتې كېدل او هغه د چا خبره ذهين انسان و.
 همدغه د استعداد او نبوغ بركت يې و، چې په زياتو ډګرونو كې وځلېد او ډېر خدمت يې وكړ، چې نه هېرېدونكي اثار به يې زموږ د ادبياتو ستره او غوښنه برخه وي. خو دغه ډول استعدادونه په ډېرو خوارو او غريبو كورنيو كې پيدا كېږي، ډېر كم داسې پېښېږي، چې د كوم شتمن زوى دې د نبوغ تر كچې ورسېږي، يا دې هم دى د ډېرې خوارۍ وړتيا ولري. هغه څوك چې په هوسايۍ او نعمتونو كې رالوى شوى وي، په خپله يې د ځان د هوسايۍ لپاره څه نه وي كړى، هغه به څنګه په دې وپوهېږي چې د ژوند لپاره ضروري شيان څه دي او انسان بايد ژوند د چا لپاره وكړي.
-
 
 == زده كړې ==
 استاد نوري په 1300ل كال د امان الله خان د پاچهۍ پر مهال د [[كندهار]] ښار په شالمار ښوونځي كې د پښتو د ښوونكي په توګه وټاكل شو، چې د هېواد بچيو ته يې پښتو ژبه تدريسوله. لكه مخكې چې يادونه وشوه وخت او حالاتو ډېرې سختۍ ورباندې راوستلې، چې په هر پړاو كې يې ګوزارونه وركړي؛ 
