--- a/محمد_گل_نوري.mw
+++ b/محمد_گل_نوري.mw
@@ -1,4 +1,7 @@
 [[Image:Flower for noori.jpg|left|thumb|300px]]
+
+د صالح محمد صالح ليكنه
+
 د زمانې په سينه كې ډېرې وياړمنې او سترې سټې، دغه راز نه هېرېدونكې څېرې ويدې دي. دا زمانه هغه تږې او وږې خوله ده، چې هر وخت يې په انسانانو پسې لټون كړى، چې د زوال كندې ته يې ولېږدوي. خو داسې نه ده چې د كوم پياوړي شخصيت په مړينې سره د هغه نوم او نورې وياړنې هم له خاورو سره خاورې شوي، بلكې موږ وينو چې غښتلي انسانان تر مړينې وروسته هم كولاى شي د نورو انسانانو پر فكرونو، اندونو او هيلو واكمني وكړي.
 زموږ بدمرغي دا ده چې په ايرو كې نغښتې مرغلرې نه شو پېژندلاى؛ يا به د پېژندنې او تشخيص وړتيا نه لرو، يا به هم عملاً او قصداً نه غواړو چې ځينې حقايق ومنو؛ حقيقت يوه ثابته پديده ده چې ترې انكار كول، له ځان او طبيعت سره جفا ده.
 استاد محمد ګل نوري هغه هېره شوې څېره ده، چې موږ يې نه پېژنو، په دې مانا چې په پوره ډول يې نه پېژنو، كه يې پېژنو، پر زياتو كارونو او هڅو يې نه يو خبر، ځكه چې زمانې، وخت او حالاتو ډېره جفا ورسره كړې ده؛ حالاتو يې د ژوند پر لار ډېر اغزي راوټوكول او ډېر څه يې ترې واخيستل.
