*Empty MediaWiki Message*

--- a/محمد_گل_نوري.mw
+++ b/محمد_گل_نوري.mw
@@ -1,16 +1,7 @@
-[[Image:Flower for noori.jpg|left|thumb|300px]]
-
-د صالح محمد صالح ليكنه
-
-د زمانې په سينه كې ډېرې وياړمنې او سترې سټې، دغه راز نه هېرېدونكې څېرې ويدې دي. دا زمانه هغه تږې او وږې خوله ده، چې هر وخت يې په انسانانو پسې لټون كړى، چې د زوال كندې ته يې ولېږدوي. خو داسې نه ده چې د كوم پياوړي شخصيت په مړينې سره د هغه نوم او نورې وياړنې هم له خاورو سره خاورې شوي، بلكې موږ وينو چې غښتلي انسانان تر مړينې وروسته هم كولاى شي د نورو انسانانو پر فكرونو، اندونو او هيلو واكمني وكړي.
-زموږ بدمرغي دا ده چې په ايرو كې نغښتې مرغلرې نه شو پېژندلاى؛ يا به د پېژندنې او تشخيص وړتيا نه لرو، يا به هم عملاً او قصداً نه غواړو چې ځينې حقايق ومنو؛ حقيقت يوه ثابته پديده ده چې ترې انكار كول، له ځان او طبيعت سره جفا ده.
-استاد محمد ګل نوري هغه هېره شوې څېره ده، چې موږ يې نه پېژنو، په دې مانا چې په پوره ډول يې نه پېژنو، كه يې پېژنو، پر زياتو كارونو او هڅو يې نه يو خبر، ځكه چې زمانې، وخت او حالاتو ډېره جفا ورسره كړې ده؛ حالاتو يې د ژوند پر لار ډېر اغزي راوټوكول او ډېر څه يې ترې واخيستل.
+'''محمد ګل نوري''' هغه هېره شوې څېره ده، چې موږ يې نه پېژنو، په دې مانا چې په پوره ډول يې نه پېژنو، كه يې پېژنو، پر زياتو كارونو او هڅو يې نه يو خبر، ځكه چې زمانې، وخت او حالاتو ډېره جفا ورسره كړې ده؛ حالاتو يې د ژوند پر لار ډېر اغزي راوټوكول او ډېر څه يې ترې واخيستل.
 
 
 == زوكړه ==
-د صالح محمد صالح ليكنه
-
-
 دى په 1279ل كال په [[كندهار]] كې زېږېدلى دى؛ هغه مهال خو دومره د زده كړې امكانات هم هر چا ته برابر نه وو، خو ارواښاد نوري وكړاى شول، چې د سيمه ييزو پوهانو او كورنيو مشرانو په مرسته زده كړه وكړي، د خپل ځانګړي استعداد او وړتيا په بركت يې ډېر څه په ذهن كې پاتې كېدل او هغه د چا خبره ذهين انسان و.
 همدغه د استعداد او نبوغ بركت يې و، چې په زياتو ډګرونو كې وځلېد او ډېر خدمت يې وكړ، چې نه هېرېدونكي اثار به يې زموږ د ادبياتو ستره او غوښنه برخه وي. خو دغه ډول استعدادونه په ډېرو خوارو او غريبو كورنيو كې پيدا كېږي، ډېر كم داسې پېښېږي، چې د كوم شتمن زوى دې د نبوغ تر كچې ورسېږي، يا دې هم دى د ډېرې خوارۍ وړتيا ولري. هغه څوك چې په هوسايۍ او نعمتونو كې رالوى شوى وي، په خپله يې د ځان د هوسايۍ لپاره څه نه وي كړى، هغه به څنګه په دې وپوهېږي چې د ژوند لپاره ضروري شيان څه دي او انسان بايد ژوند د چا لپاره وكړي.
 
@@ -27,7 +18,6 @@
 == اقتصادي وضعه او د ژوند ناخوالې ==
 ارواښاد استاد نوري ډېرش كاله په ډېرو سختيو او خواريو كې ماموريت وكړ، له بده مرغه چې د تقاعد پوره حق يې هم ترلاسه نه كړ، دا ځكه چې د جبر لارويان خو هېڅ وخت هم نه غواړي ملي مخكښان هوسا وي اويا هم تر دوى مخكې شي. ده د تقاعد په وخت كې د هغه مهال په حساب دوولس زره افغانۍ ترلاسه كړې، چې دا ډېرې كمې پيسې وې، نور يې ورځ په ورځ اقتصادي وضعه خرابېده، له دې كبله يې د [[كندهار]] په هرات دروازه كې د مستو پلورلو تاغار مخې ته كښېښود او په خپلې غريبۍ يې ځان بوخت وساته. يو مهال ورته څو بهرني څېړونكي راغلي وو، چې له استاد سره وګوري، هغوى په پوښتنو پوښتنو، هرات دروازې ته ورسېدل، له يوه دكاندار څخه چې د استاد نوري پوښتنه وكړه، هغه پر استاد ږغ كړى و: ?ماد ګله! راسه دا كسان دې غواړي?. كله چې استاد له دغو بهرنيو پوهانو سره وليدل، هغوى يې ډېر قدر وكړ، خو استاد ته ډېر حيران شول، چې دومره ستر فولكلوريسټ او ادبپوه څنګه د مستو پلورلو تاغار ته ناست دى؟ په هر حال، هغوى له استاد سره لاړل، استاد خپل زيات اثار وروښوول، خو د استاد په غوږ كې د هغه دكاندار همدا جمله ازانګې كولې، زړه يې ډېر مات شو، ويل كېږي چې خپل ډېر اثار يې هغه مهال د غوسې په حالت كې په خپله وسوځل.
 دى تر تقاعد وروسته د [[كندهار]] د هغه مهال د اطلاعاتو او كلتور رياست د لوى مدير غلام محى الدين ايوبي په ځانګړې پاملرنه د همدغه رياست په مديريت كې د اجير كاتب په توګه وټاكل شو، دوه كاله وروسته بيا د [[كندهار]] دولتي چاپخونې په مديريت كې د ارشيف د څانګې په لسمه رتبه كې د اجير كاتب په توګه وټاكل شو. په دې دندې سره وتوانېد چې څه ناڅه ذهني سكون ترلاسه كړي او ځان بوخت وساتي. 
-
 
 == ادبي هڅې او لاسته راوړنې ==
 دى به چې د خپلې دندې له مخې كله- كله نورو ولسواليو، ليريو پرتو سيمو او كليو ته ورته، نو هورې به يې له خلكو څخه متلونه، سندرې او لغات راټولول، چې په زرګونو متلونه، سندرې، فولكلوري مواد او نوره ولسي پانګه راټوله كړه، دغه راز يې له ليريو پرتو سيمو څخه يوولس ټوكه هغه دېوانونه هم راټول كړل، چې پر هغه مهال يې په وړيا توګه انجمن ته وړاندې كړل: 
@@ -64,10 +54,10 @@
 كه څه هم زيات دوستان به دا وايي چې داسې يوه درغلي هېڅ امكان نه لري، خو د ارواښاد استاد نوري په حق كې دا شوې بې انصافي خو هم د زغم وړ نه ده. بله دا چې د استاد نوري هغه خواري خو بايد يوازې په يوه جمله كې خلاصه نه شي، د هغه اثر بايد هغه په خپل نوم خپور شوى واى. كه څوك دا نه مني، چې دغه اثر دې د استاد نوري وي، موږ به د چاپ شوي قاموس د الف رديف په پاى كې د استاد نوري يو خپور شوى يادښت راواخلو، چې د خپرندوى ورته پام نه دى شوى، چې ويې باسي، ځكه استاد دغه قاموس ته نوراللغات نوم وركړى و، چې پښتو ټولنې پښتو قاموس نومولى دى. دغه يادښت د نوراللغات (پښتو قاموس  د لومړى ټوك، د الف رديف په پاى كې پر 69 مخ باندې راغلى:
 
 *"نوراللغات د الف رديف پايته ورسېدى، د دې رديف لغات او مصادر او څلورګوني مشتفات او اصطلاحات په لاندې شمېر سره دي: 
-***لغات 1759
-***مصادر 148
-***مشتقات 516
-***اصطلاحات 413_(3)?
+*لغات 1759
+*مصادر 148
+*مشتقات 516
+*اصطلاحات 413_(3)?
 دغه يادښت په خپله دا زباتوي، چې دغه قاموس د استاد محمدګل نوري له خوا ليكل شوى، ترتيب شوى او اوډل شوى دى. 
 
 [[Image:'''د استاد نوري نور غلا شوي ليكلي كتابونه''']]د استاد نوري پر ځينو نورو اثارو هم خلكو خېټه اچولې، يا يې د ده په ژوندوني، يا هم تر مړينې وروسته په خپلو نومونو خپاره كړي دي. د ساري په توګه ملي هنداره د استاد نوري د فولكلوريكو كيسو يوه په زړه پورې لړۍ او مشهور اثر دى، چې په زياتو كورنيو كې خلك ورسره اشنا دي او په [[كندهار]] كې خو زيات مينه وال لري. پر[[كندهار]] سربېره په ګڼ شمېر نورو سيمو كې هم زياتو كسانو دغه نكلونه لوستلي دي؛ دغه اثر څو- څو ځلې د بل چا په نامه چاپ شو، ان چې د پاكستان په ټلويزيون كې د ډرامو په بڼه كې په يوه لړۍ كې خپرې شوې، خو د بل چا نوم به د ليكوال په توګه ليكل كېده. حال دا چې حق د استاد نوري و، چې بايد يادونه يې شوې واى. 
@@ -86,47 +76,47 @@
 '''استاد محمد ګل نوري په 1351ل كال، يانې تر خپلې مړينې يو كال وړاندې خپل چاپ او ناچاپ اثار داسې راپېژني:'''
 
 
-== '''چاپ اثار يې''' ==
-** ليك ښوونكى: دوه ټوكه، لومړۍ برخه يې د انشاء اصول او دويمه برخه يې د ليك لېږلو په اړه ده، چې په 1317 ل كال چاپ شوې دي. 
-** ملي هنداره: درې ټوكه، دوه ټوكه بېل- بېل چاپ شوي، درېيم دا يې د [[كندهار]] په دولتي چاپخونه كې د [[احمدشاه بابا]] د كتاب چاپولو موسسې له خوا چاپ شوى دى. 
-** پښتو اصطلاحات: يو ټوك، چې په 1320 ل كال كې چاپ شوى دى. 
-** ملي سندرې او لنډۍ: يو ټوك. 
-** متلونه: يو ټوك. 
-** دينياتونه: يو ټوك. 
-** مدني اخلاق: دوه ټوكه. 
-** مدني معلومات: دوه ټوكه. 
-** پښتو قاموس (نوراللغات: چې 45 زره لغات لري او استاد د خپلې لور (طيبې په مرسته دا لغات سره ډلبندي كړي او په دوو ټوكو كې چاپ شوي، چې د پښتو ټولنې له خوا بيا چاپ شول. 
-**  رحمه اللعالمين: ليكوال يې محمد احمد جادالولي دى، چې استاد له عربي ژبې څخه ژباړلى دى، 1341.
+== چاپ شوي آثار ==
+#ليك ښوونكى: دوه ټوكه، لومړۍ برخه يې د انشاء اصول او دويمه برخه يې د ليك لېږلو په اړه ده، چې په 1317 ل كال چاپ شوې دي. 
+#ملي هنداره: درې ټوكه، دوه ټوكه بېل- بېل چاپ شوي، درېيم دا يې د [[كندهار]] په دولتي چاپخونه كې د [[احمدشاه بابا]] د كتاب چاپولو موسسې له خوا چاپ شوى دى. 
+#پښتو اصطلاحات: يو ټوك، چې په 1320 ل كال كې چاپ شوى دى. 
+#ملي سندرې او لنډۍ: يو ټوك. 
+#متلونه: يو ټوك. 
+#دينياتونه: يو ټوك. 
+#مدني اخلاق: دوه ټوكه. 
+#مدني معلومات: دوه ټوكه. 
+#پښتو قاموس (نوراللغات: چې 45 زره لغات لري او استاد د خپلې لور (طيبې په مرسته دا لغات سره ډلبندي كړي او په دوو ټوكو كې چاپ شوي، چې د پښتو ټولنې له خوا بيا چاپ شول. 
+#رحمه اللعالمين: ليكوال يې محمد احمد جادالولي دى، چې استاد له عربي ژبې څخه ژباړلى دى، 1341.
 
-== '''ناچاپ اثار يې''' ==
-**ملي لوبې يو ټوك. 
-** پښتو اهنګونه: چې تر شلو زيات اهنګونه لري (استاد يادونه كوي، چې دا اهنګونه ښاغلي فرخ افندي زما په لارښوونه په پيانو ږغولي او وروسته يې نوټېشن ترتيب كړى دى .
-** ملي دودونه: يو ټوك. 
-** خوږ بانډار: درې ټوكه، چې حكايتونه او فكاهيات لري. 
-** د خوشالخان خټك حل اللغات: يو ټوك. 
-** د خوشال منتخبات: يو ټوك
-** د عبدالقادر خان منتخبات: يو ټوك. 
-** د احمد شاه بابا منتخبات: يو ټوك. 
-** پښتو ياد: چې د پښتو د زده كړې طرز دى، يو ټوك. 
-** د احد غزاء: يو ټوك. 
-** ديارلس نكلونه:يو ټوك. 
-** د مينو رساله: يو ټوك، چې يوه برخه يې په كابل مجله كې چاپ شوې ده. 
-** د نوري دېوان. 
-** د شين خاالو نارې: يو ټوك
-** سنګلېچي قاموس: يو ټوك
-** واخي قاموس: يو ټوك
-** اشكاشمي قاموس: يو ټوك
-** منجي قاموس: يو ټوك
+== ناچاپه آثار ==
+#ملي لوبې يو ټوك. 
+#پښتو اهنګونه: چې تر شلو زيات اهنګونه لري (استاد يادونه كوي، چې دا اهنګونه ښاغلي فرخ افندي زما په لارښوونه په پيانو ږغولي او وروسته يې نوټېشن ترتيب كړى دى .
+#ملي دودونه: يو ټوك. 
+#خوږ بانډار: درې ټوكه، چې حكايتونه او فكاهيات لري. 
+#د خوشالخان خټك حل اللغات: يو ټوك. 
+#د خوشال منتخبات: يو ټوك
+#د عبدالقادر خان منتخبات: يو ټوك. 
+#د احمد شاه بابا منتخبات: يو ټوك. 
+#پښتو ياد: چې د پښتو د زده كړې طرز دى، يو ټوك. 
+#د اُحد غزاء: يو ټوك. 
+#ديارلس نكلونه:يو ټوك. 
+#د مينو رساله: يو ټوك، چې يوه برخه يې په كابل مجله كې چاپ شوې ده. 
+#د نوري دېوان. 
+#د شين خاالو نارې: يو ټوك
+#سنګلېچي قاموس: يو ټوك
+#واخي قاموس: يو ټوك
+#اشكاشمي قاموس: يو ټوك
+#منجي قاموس: يو ټوك
 '''وروستي پينځه سيندونه (قاموسونه) د بدخشي (د افغانستان د ځينو ګړدودونو (لهجو) قاموس) څخه را ايستل شوي دي.'''
-** زوړ [[كندهار]]: د [[كندهار]] د لرغونو غونډيو او ځايونو پېژندنه ده، دغه اثر جايزه هم ګټلې ده.
+#زوړ [[كندهار]]: د [[كندهار]] د لرغونو غونډيو او ځايونو پېژندنه ده، دغه اثر جايزه هم ګټلې ده.
 
-== ژباړل شوي اثار يې ==
-** د روغتيا عمومي قوانين: يو ټوك. 
-** د روغتيا ژوندون: يو ټوك. 
-** د صحت ساتنه: چې په طلوع افغان كې هم په پرله پسې ډول خپور شوى دى. 
-** د شين خالۍ نارې. 
-** 72 ديالوګونه او ډرامې. 
-استاد محمد ابراهيم عطايي د [[كندهار]] مجلې د 1352 ل كال د ليندۍ مياشت، پرله پسې 164 مه ګڼه كې د (مرحوم محمد ګل نوري له موږ څخه ګيله من جلا سو  تر سرليك لاندې د استاد نوري د مړينې نېټه د 1352ل كال د ليندۍ شلمه ښيي، چې پر پنځوس كلنو خدمتونو يې هم رڼا اچولې ده.(4)
+== ژباړل شوي اثار ==
+#د روغتيا عمومي قوانين: يو ټوك. 
+#د روغتيا ژوندون: يو ټوك. 
+#د صحت ساتنه: چې په طلوع افغان كې هم په پرله پسې ډول خپور شوى دى. 
+#د شين خالۍ نارې. 
+# 72 ديالوګونه او ډرامې. 
+[[محمد ابراهيم عطايي]] د [[كندهار]] مجلې د 1352 ل كال د ليندۍ مياشت، پرله پسې 164 مه ګڼه كې د (مرحوم محمد ګل نوري له موږ څخه ګيله من جلا سو  تر سرليك لاندې د استاد نوري د مړينې نېټه د 1352ل كال د ليندۍ شلمه ښيي، چې پر پنځوس كلنو خدمتونو يې هم رڼا اچولې ده.(4)
 
 '''د استاد نوري ټول اثار ملي او غور هدي، په تېره بيا دده ملي هنداره خورا مشهور او شهكار اثر دى، ځكه 
 چې دا كار د بل چا دلاسه پوره نه ؤ. په دې افسانو كې د ادم خان او درخانۍ، فتح خان برېڅ، مومن خان او شيرينۍ د نوري افسانې د ملي ادب يوه قيمتي پانګه ده'''.
@@ -140,7 +130,7 @@
 د ځان د يوه سپېله طالب په بڼه كړى دى. د باچا كورته نژدې په يوه مسجد كې يې ځاى ورته نيولى دى، ستيږي، د ورځې د طالبانو  سره سبق پر ملا وايي، چې نيمه شپه سي، بېرته د پېري په ډول سي، راسي نه يې پېره دار ويني نه يې مينځيانې (وينځې) ويني، د باچا د لور سره پر پلنګ (پالنګ) تر سهاره شپه تېره كړي، نه يې خوب ته پرېږدي، نه يې بل څه ته، سهار وختي بېرته ولاړ سي، مسجد ته د طالب په بڼه سي په مسچد كې سق وايي هېڅوك يې نه پېژني. ....................
  
 
-== د استاد نوري د شېر نمونه ==
+== د شعر يوه بېلګه ==
 د ښكارندوى غوري د دې بوللې: 
 د سپرلي ښكلونكي بيا كړه سينګارونه
 بيا يې ولوڼل په غرونو كې ګلونه
@@ -169,8 +159,6 @@
 د پښتو د شعر ستورى (نوري  نه دى 
 چې د ستورو په شان جوړ كي ښه بيتونه.(5)
 
-
-'''د صالح محمد صالح ليكنه'''
 
 == اخځليكونه ==
 *1. [[كندهار]]: پرله پسې 143مه ګڼه، د 1351ل كال، زمري مياشت، د استاد محمد ګل نوري مركه.
