--- a/محمد_گل_نوري.mw
+++ b/محمد_گل_نوري.mw
@@ -42,8 +42,7 @@
 == د استاد ترټولو خوږه خاطره ==
 استاد ته چا، پر چاپ شويو كتابونو يوه انه هم نه ده وركړې، ده په دې برخه كې له مزد او حق الزحمې پرته د خپل ولس خدمت ته ملا تړلې؛ ده په خپله همدغه مركه كې وړاندې د خپلو خوږو خاطرو په لړ كې تر ټولو خوږه او نه هېرېدونكې خاطره دا ګڼي چې په 1318 ل كال كې يې د پښتو ټولنې له خوا لومړنى كتاب "ليك ښوونكى" په دوو ټوكو كې چاپ شو. 
 
-رښتيا هم؛ ځينې پوهان كه د هر ليكوال اثار د هغه زامن ګڼي، له بلې خوا د لومړي كتاب خپرېدل بل خوند او كيفيت لري او په دې خوند به هغه څوك پوهېږي چې كتابونه يې چاپ شوي وي. خو دلته بيا استاد نورې ترخې خاطرې هم يادوي، هغه وړاندې زياتوي: "... 
-
+رښتيا هم؛ ځينې پوهان كه د هر ليكوال اثار د هغه زامن ګڼي، له بلې خوا د لومړي كتاب خپرېدل بل خوند او كيفيت لري او په دې خوند به هغه څوك پوهېږي چې كتابونه يې چاپ شوي وي. خو دلته بيا استاد نورې ترخې خاطرې هم يادوي، هغه وړاندې زياتوي: "
 
 == د استاد ترټولو ترخه خاطره ==
 ډېره ترخه او نه هېرېدونكې خاطره چې د مرګ تر ساعته به مې لا هم په زړه كې وي، هغه دا ده چې د ادبي انجمن او پښتو ټولنې د تاسيس له وخته څوك په دې بريالي نه سول چې يو لوى پښتو قاموس جوړ كړي، په هغه وخت كې چې زه د تاليف او ترجمې مدير وم او بيا د افغانستان د محلي ژبو او لغاتو د څانګې د آمر په توګه وټاكل سوم، نو د مطبوعاتو د مستقل رياست د رسمي ليك په ذريعه وګمارل سوم، چې ژر تر ژره بايد پښتو قاموس جوړ كړم او دا خبره هم په ليك كې زياته سوې وه، كه د دغه كار تر عهدې ووتلې، نو ستا مكافات به د عمومي مدير رتبه او معاش وي. لنډه دا چې په ډېر زحمت مې د خپلې لور (طيبو په مرسته دغه قاموس ترتيب او ميدان ته مې راويوست، چې نيم يې د ?شين? تر رديفه د [[كندهار]] په دولتي مطبعه كې د ايازي صاحب په كوښښ او زما په خپله تصحيح او د ?شين? له رديف څخه بيا تر پايه د كابل په دولتي مطبعه كې چاپ سو. په دغه وخت كې زه په [[كندهار]] كې د مطبعې مدير وم، ځكه مې ونه ليد چې نوموړى قاموس په څه ترتيب چاپ سو، كله چې ذكر سوى قاموس چې ما (نوراللغات نوم پر ايښى و، د پښتو قاموس په نامه نشر سو، كله چې ما وكوت، نو له بده مرغه زما نوم پر لومړۍ پاڼه نه و ليكل سوى، لېكن د نورو اشخاصو د نومونو په لړ كې زما نوم هم سره ليكل سوى و، په دې ډول زما د كلو- كلو زحمت او مكافاتو او همدغه وعدې چې قاموس به د محمد ګل نوري په نامه طبع كوو، عبث ولاړى".(1)
