--- a/محمد_گل_نوري.mw
+++ b/محمد_گل_نوري.mw
@@ -168,7 +168,8 @@
 
 
 
-[[وېشنيزه:پښتانه]]
+[[وېشنيزه:پښتانه شاعران]]
 [[وېشنيزه:پښتانه ليکوال]]
 [[وېشنيزه:افغاني ليکوال]]
 [[وېشنيزه:افغانان]]
+[[وېشنيزه:پښتانه]]
