--- a/رفيع_الله_ستانکزى.mw
+++ b/رفيع_الله_ستانکزى.mw
@@ -76,5 +76,9 @@
 <br>
 دومره غمونه ستانګزي دپاسه
 </center>
-[[Category: پښتانه شاعران]]
-[[Category: پښتانه ليکوالان]]
+
+
+
+
+[[وېشنيزه: پښتانه شاعران]]
+[[وېشنيزه: پښتانه ليکوال]]
