/* د ستانکزي د ناچاپو اثارو لړليک */

--- a/رفيع_الله_ستانکزى.mw
+++ b/رفيع_الله_ستانکزى.mw
@@ -10,9 +10,10 @@
 دښاغلي ستانګزي کوم اثر په ځانګړې توګه نه دی چاپ شو، خو د بېلابېلو مجلو او پاڼو څخه يې خپلې ليکنې د هېواد والو سره شريکې کړي دي. 
 
 
-== د ستانکزي د ناچاپو اثارو لړليک ==
-
+== چاپ شوي آثار ==
 #په پښتو ادب کې ژباړه او اړتيا
+
+== ناچاپه آثار ==
 #د عبدالحميد مومند ژوندليک، شاعري، سبک او د سبک پلويان يې
 #د عبدالحميد مومند په اشعارو کې د ماهيت په لحاظ تشبيه
 #د ملنګ جان په اشعارو کې بديعي ښکلاوې
