--- a/رفيع_الله_ستانکزى.mw
+++ b/رفيع_الله_ستانکزى.mw
@@ -52,31 +52,9 @@
 ستانګزيه تا خو مينه په رښتيا کړه
 <br>
 ٭٭٭٭٭
-<center>
- 
-<center>
-تندي دپاسه 
-<br>
-لکه خورې زلفې تندي د پاسه  
-<br>
-دومره غمونه مې زړګي د پاسه 
-<br>
-څوک مو مرى باندې چاړه راکاږي 
-<br>
-څوک مو خزان شول پسرلي د پاسه 
-<br>
-راته هېڅ پام دهغه چا نه کيږي  
-<br>
-چې يې نازونه وړم زړګي د پاسه 
-<br>
-پورته له مينې مې يودا ګټه کړه  
-<br>
-په لاره پښه نه ږدم مېږي دپاسه 
-<br>
-څومره اداوې چې دښکلو وينې 
-<br>
-دومره غمونه ستانګزي دپاسه
 </center>
+
+==  باندنۍ تړنې ==
 
 
 
