--- a/رفيع_الله_ستانکزى.mw
+++ b/رفيع_الله_ستانکزى.mw
@@ -55,8 +55,7 @@
 </center>
 
 ==  باندنۍ تړنې ==
-
-
+[ په پښتو ادب کې ژباړه او اړتيا] - د رفيع الله ستانکزي وېبلاګ
 
 
 [[وېشنيزه: پښتانه شاعران]]
