*Empty MediaWiki Message*

--- a/شهرت_ننگيال.mw
+++ b/شهرت_ننگيال.mw
@@ -2,6 +2,32 @@
 
 
 
+== مخينه ==
+
+
+
+== زده کړې ==
+
+
+
+== دندې ==
+
+
+
+== چاپ شوي آثار ==
+#هلته چې تاريخ تکرارېږي - چاپکال ۱۳۷۰ ل.
+
+
+== ناچاپه آثار ==
+
+
+
+== باندنۍ تړنې ==
+
+
+
+== سرچينې ==
+
 
 
 
