--- a/محمد_موسى_شفيق.mw
+++ b/محمد_موسى_شفيق.mw
@@ -27,6 +27,11 @@
 كله چې ارواښاد د هېواد د صدر اعظم په توګه وټاكل شو هېواد له ډېرو كړكېچونو حالاتو سره لاس او ګرېوان ؤو، د هېواد دښمنان هم دى حالاتو ته ځير او په كمين كې ورته ناست ؤو، هغوي چې كله د شفيق پوهه ده حالاتو مثبت بدلون او د هېواد پرمختګ وليد دا هغه څه ؤو چې دوى ته د زغملو وړ نه ؤو, هماغه ؤو چې خداى بخلې د ۱۳۵۲ كال د چنګاښ په كودتا كې د پرچميانو له خوا زنداني شو، له دونيم كاله زندان وروسته په ۱۳۵۴ كې له زندان راخلاص شو, خو دوهم ځل د ۱۳۵۷ د ثور په خونړۍ كودتا كې بندې او د همدې مياشت په ۱۱ نيټه د زندان تورو تمبو شاته يې د شهادت جام وڅښه.
 
 
+
+== چاپ شوي آثار ==
+#عبقريان او نورې کيسې (عبقريان و قصه های ديګر) - په پښتو او دري ژبو د داستانونو ټولګه - د کتاب چاپولو موسسه - ۱۳۴۶ ل. کال کابل
+#د ننګرهار شاعران - د ننګرهار د شاعرانو ژوندليکونه - د افغانستان د اطلاعاتو او فرهنګ وزارت - چاپکال ۱۳۸۶ ل. کابل
+
 == مړينه ==
 
 ته شفيق ئې،ته رفيق ئې ته موسى زمونږ د طور ئې
