--- a/محمد_موسى_شفيق.mw
+++ b/محمد_موسى_شفيق.mw
@@ -43,6 +43,6 @@
 
 [[وېشنيزه: پښتانه شاعران]]
 [[وېشنيزه:پښتانه ليکوال]]
-[[وېښنيزه:پښتانه]]
+[[وېشنيزه:پښتانه]]
 [[وېشنيزه:افغاني ليکوال]]
 [[وېشنيزه:افغانان]]
