/* چاپ شوي آثار */

--- a/شهرت_ننگيال.mw
+++ b/شهرت_ننگيال.mw
@@ -16,7 +16,7 @@
 
 == چاپ شوي آثار ==
 #هلته چې تاريخ تکرارېږي - چاپکال ۱۳۷۰ ل.
-
+#په سکروټوکی مزلونه - له پیښوره ترخوست کابل اوکندهار یونلیک - چاپکال ۱۳۷۹ ل. پېښور
 
 == ناچاپه آثار ==
 
