/* چاپ شوي آثار */

--- a/شهرت_ننگيال.mw
+++ b/شهرت_ننگيال.mw
@@ -17,6 +17,7 @@
 == چاپ شوي آثار ==
 #هلته چې تاريخ تکرارېږي - چاپکال ۱۳۷۰ ل.
 #په سکروټوکی مزلونه - له پیښوره ترخوست کابل اوکندهار یونلیک - چاپکال ۱۳۷۹ ل. پېښور
+#پخوانی پاچا محمد ظاهر شاه - لویه جرګه، صلح، دیموکراسي - د افغانستان د پخواني پاچا محمد ظاهر شاه د مرکو، پيغامونو او اعلاميو ټولګه - چاپکال ۱۳۷۹ ل. پېښور
 
 == ناچاپه آثار ==
 
