*Empty MediaWiki Message*

--- a/پير_محمد_کاروان.mw
+++ b/پير_محمد_کاروان.mw
@@ -33,4 +33,8 @@
 په کړۍ د زولنو يادوو خدای
 
 
-[[Category: پښتانه شاعران]]
+[[وېشنيزه: پښتانه شاعران]]
+[[وېشنيزه:پښتانه ليکوال]]
+[[وېشنيزه:پښتانه]]
+[[وېشنيزه:افغانان]]
+[[وېشنيزه:افغاني ليکوال]]
