--- a/محمد_افضل_ټکور.mw
+++ b/محمد_افضل_ټکور.mw
@@ -9,13 +9,10 @@
 
 == چاپ شوي آثار ==
 ښاغلی ټکور د لاندنيو چاپي اثارو خاوند دی :
-#دا ليکوال او دا څېرې - تذکره - بيهقي موسسې له خوا په کال ١٣٦٤ ل کابل
-دا د هغو ٩٠ تنو ليکوالو او شاعرانو تذکره ده چي د ارواښاد استاد بېنوا د (اوسني ليکوال) تر پېژندګلوی وروسته يې علمي او ادبي کارونه کړي دي. دغه اثر په ٥٠٠ مخونو کي په ١٣٦٤ ل کال د بيهقي د نشراتي موسسې له خوا په کابل کي خپور شوی دی .
+#دا ليکوال او دا څېرې - تذکره - دا د هغو ٩٠ تنو ليکوالو او شاعرانو تذکره ده چي د ارواښاد استاد بېنوا د (اوسني ليکوال) تر پېژندګلوی وروسته يې علمي او ادبي کارونه کړي دي. دغه اثر په ٥٠٠ مخونو کي په ١٣٦٤ ل کال د بيهقي د نشراتي موسسې له خوا په کابل کي خپور شوی دی.
 #ښکالو د پسرلو - شعري ټولګه - د پښتو ټولني چاپ ١٣٦٥ ل کابل
-#د نظر غشي - د سايل شعري ټولګه - د قومونو او قبايلو وزارت چاپ ١٣٦٧ ل کابل
-د خوږ ژبي شاعر رحمت شا سايل د شعرونو غورچاڼ دی چي د ښاغلي ټکور له خوا ترتيب شوې او سريزه پر ليکل شوېده.
-#د هسک پېغله - د بېنوا شعرونه - د ليکوالو ټولني چاپ ١٣٦٨ ل کابل 
-د هسک پېغله د استاد بېنوا دهغو شعرونو ټولګه ده کوم چي په تيرو پنځوسو کلونو کي د هيواد په بېلابېلو خپرونو کي چاپ شوي دي . راټولونکی يې افضل ټکور دی .
+#د نظر غشي - د خوږ ژبي شاعر رحمت شا سايل د شعرونو غورچاڼ دی چي د ښاغلي ټکور له خوا ترتيب شوې او سريزه پر ليکل شوېده - د قومونو او قبايلو وزارت چاپ ١٣٦٧ ل کابل
+#د هسک پېغله - د هسک پېغله د استاد بېنوا دهغو شعرونو ټولګه ده کوم چي په تيرو پنځوسو کلونو کي د هيواد په بېلابېلو خپرونو کي چاپ شوي دي . راټولونکی يې افضل ټکور دی - د ليکوالو ټولني چاپ ١٣٦٨ ل کابل 
 #پرهرونه ټکورونه - شعري ټولګه - د ليکوالو ټولني چاپ ١٣٦٨ ل کابل
 #يو داغ يو ټکور - شعري ټولګه - په خپل لګښت چاپ ١٣٧٤ ل پېښور
 
