*Empty MediaWiki Message*

--- a/محمد_افضل_ټکور.mw
+++ b/محمد_افضل_ټکور.mw
@@ -1,8 +1,9 @@
 ښاغلی افضل ټکور په کال ١٣٣٩ لمريز کال کي د ننګرهار ولايت د کوزکونړ ولسوالۍ دکوټۍ په کلي کي زېږيدلی دی .
+
+== زده کړې ==
 لومړنۍ زده کړي يې د خپل کلي په ښوونځی کښي تر سره کړي او په ١٣٥٧ لمريز کال دکونړ ولايت د کوز کنړ د ولسوالۍ د سيدجمال الدين د ليسې د دولسم ټولګی نه فارغ شوی او لوړي زده کړي يې د ننګرهار پوهنتون د انجنيرۍ په پوهنځی کي تر سره کړي دي . په کال ١٣٦٤ ل يې نوموړې پوهنځی پای ته ورسوله .
 
 == دندې ==
-
 د پوهنځی له فراغت وروسته يې د افغانستان د ليکوالو د ټولني سره په کار پيل وکړ ، په لومړيو کي د ژوندون مجلې مهتمم ، او  وروسته  د ١٣٧٦ ل کال څخه وروسته بيا د ډاکټر نجيب الله د حکومت تر ړنګېدو پوري  د نوموړي مجلې دمسول مدير په توګه پاته شو.
 ښاغلی ټکور د يوې مودې لپاره د انيس ورځپاڼي د ادبي مخ چي د نکريزو پاڼه نومېدله  چلوونکی و، وروسته د څو کالو لپاره د افغانستان راډيو ادبي خپرونه ( ولولې ) لپاره شعرونه او ... ليکلي دي ،  ددې ترڅنګ تر اوسه ( ١٣٨٣ ل ) پوري د لسګونو کتابونو اهتمام کړی ، په بېلابېلو خپرونو کي يې څېړنيزي مقالې خپرې شوي ، او بېلابېلو غونډو او سيمينارونو لپاره يې پر مختلفو موضوګانو څېړني مقالې کښلي دي .
 ښاغلی ټکور  د شپږو کالو راهيسي د خپلي کورنۍ سره په هالنډ کي مېشت دی .
