--- a/محمد_حامد_حليمي.mw
+++ b/محمد_حامد_حليمي.mw
@@ -4,15 +4,11 @@
 لومړني او ثانوي زدکړي يې دحضرت ابراهيم خليل الله په عالي ليسې کې بشپړي کړي او په کال  1377 کې له نوموړي ليسې څخه په په اعلي درجه فارغ شوي او دهمدغه کال دکانکور دآزمويني له لاري دکابل پوهنتون دفارمسي پوهنځي ته بريالي شو ، په کال 1381 کال کې يې له نوموړي پوهنځي څخه دلسانس ديپلوم تر لاس کړ. د 1383 کال د لړم دمياشتي په دولسمه نيټه يې دکدري آزمويني له بشپړولو څخه وروسته يې دافغانستان دعلومو اکاډمي دعلمي غړي توب وياړ تر لاسه کړ. نوموړي په پښتو،دري او انګريزي ژبو پوهيږي . تر اوس مهال يې په لس ګونو علمي څيړنيزي مقالي مطالب او شعرونه دهيواد دمطبوعاتو او بیلابیلو انترنیتی ویب پاڼو له لارې خپاره شوي دي .
 
 == آثار ==
-د بنسټيزو درملو څيړنه 1385 چاپ
-
-دنسخې ليکني لاري چاري  
-
-له اغرو څخه غاټول دشعرونو مجموعه تر چاپ لاندي 
-
-وردګ 
-
-دګناه پیژندنه
+#د بنسټيزو درملو څيړنه 1385 چاپ
+#دنسخې ليکني لاري چاري  
+#له اغرو څخه غاټول - د شعرونو مجموعه تر چاپ لاندي 
+#وردګ 
+#د ګناه پیژندنه
 
 
 [[وېشنيزه:پښتانه ليکوالان]]
