/* دشعر نمونه یې */

--- a/مولوي_گل_رحمن_ديوبندي.mw
+++ b/مولوي_گل_رحمن_ديوبندي.mw
@@ -31,17 +31,20 @@
 مولوي ګلرحمن  دیوبندې  هملته د هجرت  په دیار کې  په  ۱۹۹۶زیږدیز کال د اپریل د میاشتې په ۲۷مه د ورپیښې ناروغۍ  له امله  ددې فانې  نړۍ د ژوند څخه سترګې  پټې کړې  او  د الله ج  درحمت  غیږې ته ورستون شو.  اوبیا  دهغه د دینې وصیت  سره  سم هملته د هجرت په دیار کې  خاورو ته  وسپارل  شو.
 
 == دشعر نمونه یې ==
-شات خواږه دي  خو مریض ته به دا  څه معلوم شي
+{{شعر}}
+{{ب|شات خواږه دي  خو مریض ته به دا  څه معلوم شي|دا خو مریض دې  خو مریض  ته به  ترخه  معلوم  شي}}
+{{ب|چې لمر را خیژي  رڼا کاندې  جهان  ټول|شوپرک  ته به دلمر  وړانګه په څه معلوم شي .}}
+{{ب|یومحمد ص  دې  چې رهبر  د ټول  جهان  دې|اې ګل رحمانه  موعند  ته به دا څه  معلوم  شي}}
+{{د شعر پای}}
 
-دا خو مریض دې  خو مریض  ته به  ترخه  معلوم  شي .
 
-چې لمر را خیژي  رڼا کاندې  جهان  ټول
 
-شوپرک  ته به دلمر  وړانګه په څه معلوم شي .
 
-یومحمد ص  دې  چې رهبر  د ټول  جهان  دې
 
-اې ګل رحمانه  موعند  ته به دا څه  معلوم  شي
+
+
+
+
 
 
 
