*Empty MediaWiki Message*

--- a/ويکيپېډيا_ليکونکی.mw
+++ b/ويکيپېډيا_ليکونکی.mw
@@ -22,16 +22,7 @@
 [[جهاد جوهری]]
 
 <br><br>
-===Voting===
-You can use following templates to vote for the wikipedian that you want him to become a :
-* <nowiki>{{ملاتړ}}  </nowiki> ({{ملاتړ}}),
-* <nowiki>{{بډ}}   </nowiki> ({{بډ}}),
-* <nowiki>{{خنثا}}  </nowiki> ({{خنثا}}),
-* <nowiki>{{انګېرنه}}  </nowiki> ({{انګېرنه}}),
-* <nowiki>{{مالومات}}  </nowiki> ({{مالومات}}),
-* <nowiki>  {{پوښتنه}}</nowiki> ({{پوښتنه}}).
-
-Please include a few words about why you liked/didn't like the picture, '''especially''' when you vote oppose. Remember also to put your signature (<nowiki>~~~~</nowiki>).   Anonymous votes are not allowed.
+{{دنظربډوالی}}
 
 == د پښتو ويکيپېډيا د ليدنمخ (Interface) ژباړونکي ==
 [[مجاور احمد زيار|پوهاند مجاراحمدزيار]]<br>
