*Empty MediaWiki Message*

--- a/ويکيپېډيا_ليکونکی.mw
+++ b/ويکيپېډيا_ليکونکی.mw
@@ -22,7 +22,7 @@
 [[جهاد جوهری]]
 
 <br><br>
-{{دنظربډوالی}}
+{{بې-پرېوالی}}
 
 == د پښتو ويکيپېډيا د ليدنمخ (Interface) ژباړونکي ==
 [[مجاور احمد زيار|پوهاند مجاراحمدزيار]]<br>
