The file [[:Image:Coat_of_Arms_of_Iceland.png]] has been removed, as it has been deleted by [[:commons:User:Shizhao]]: ''In category [[commons::category:Unknown as of 16 February 2009|Unknown as of 16 February 2009]]; no license''. ''[[m:User:Commons

--- a/آیسلنډ.mw
+++ b/آیسلنډ.mw
@@ -2,7 +2,7 @@
 |اصلي نوم = Lýðveldið Ísland<br>Republic of Iceland
 |عام نوم = Iceland
 |بېرغ = Flag of Iceland.svg
-|نښان = Coat of Arms of Iceland.png
+|نښان =
 |نخشه = LocationIceland.png
 |national_motto =<small>none</small> 
 |ملي سرود = [[Lofsöngur]]
