The file [[:Image:Coat_of_Arms_of_Samoa.png]] has been removed, as it has been deleted by [[:commons:User:Shizhao]]: ''In category [[commons::category:Unknown as of 16 February 2009|Unknown as of 16 February 2009]]; no license''. ''[[m:User:CommonsDe

--- a/ساموا.mw
+++ b/ساموا.mw
@@ -3,7 +3,7 @@
 |اصلي نوم= Independent State of Samoa
 |عام نوم = Samoa
 |بېرغ = Flag of Samoa.svg
-|نښان = Coat of Arms of Samoa.png
+|نښان =
 |symbol_type = Coat of arms
 |نخشه = LocationSamoa.png
 |national_motto = ''Fa'avae i le Atua Samoa''<br>([[Samoan language|Samoan]]: Samoa is founded on God)
