The file [[:Image:Sri_lanka_coa.png]] has been removed, as it has been deleted by [[:commons:User:Shizhao]]: ''In category [[commons::category:Unknown as of 16 February 2009|Unknown as of 16 February 2009]]; no license''. ''[[m:User:CommonsDelinker|T

--- a/سریلانکا.mw
+++ b/سریلانکا.mw
@@ -5,7 +5,7 @@
 |conventional_long_name = Democratic Socialist Republic of Sri Lanka
 |عام نوم = Sri Lanka
 |بېرغ = Flag of Sri Lanka.svg
-|نښان = Sri lanka coa.png
+|نښان =
 | symbol_type=Coat of arms
 |نخشه = LocationSriLanka.png
 |national_motto = none
