--- a/لیبریا.mw
+++ b/لیبریا.mw
@@ -304,6 +304,7 @@ Mississippi in Africa: The Saga of the Slaves of Prospect Hill Plantation and Th
 [[lb:Liberia]]
 [[li:Liberia]]
 [[lij:Libeïa]]
+[[lmo:Liberia]]
 [[ln:Liberia]]
 [[lt:Liberija]]
 [[lv:Libērija]]
