--- a/عبدالاحد_مومند.mw
+++ b/عبدالاحد_مومند.mw
@@ -12,7 +12,10 @@
 | mission       =[[Soyuz TM-6]]
 | insignia      =
 |}}
-'''عبدالاحد مومند ''' په ١ د جنوري، ١٩٥٩ ز کال د افغانستان  [[د غزني ولايت]]  په سرده کې نړۍ ته سترګې پرانيسې دي . نوموړی د افغانستان لومړنی او په نړېواله کچه دوهم مسلمان ستوريونی دی.
+'''عبدالاحد مومند ''' (۱ د جنوري، ۱۹۵۹ ز -) لومړنی افغان ستورمزلی دی چې د تشيال مزل يې وهلی. هغه له خپلې زده کړې په افغانستان کې د هوابازۍ په پوهنځي کې بشپړې کړي خو بيا وروسته د روسيې په تخنيکي مرستو افغانستان هم په داسې هېوادونو په کتار کې راغی چې د تشيال مزل يې کړی دی. عبدالاحمد مومند په ۱۹۸۸ ز. کال کې د همدغه تشيالي يانه نه وروسته د ګڼ شمېر افغانانو لخوا وستايل شو او د هماغه وخت د ولسمشر لخوا لوړه پوځي رتبه ورکړل شوه.
+
+== مخينه ==
+د افغانستان  [[د غزني ولايت]]  په سرده کې نړۍ ته سترګې پرانيسې دي . نوموړی د افغانستان لومړنی او په نړېواله کچه دوهم مسلمان ستوريونی دی.
 
 == زده کړې ==
 ښاغلي عبدالاحد مومند خپلو لومړنيو زده کړو وروسته  د کابل  له پوليتخنيک انستيتوت څخه  او بيا وروسته له  هوايي  پوهنتون څخه  فارغ شو ، نورې لوړې  زده کړې يې  په پخواني  شوروي اتحاد کې بشپړې کړې دي.
