/* له هوابازۍ نه تر ستوريونۍ */

--- a/عبدالاحد_مومند.mw
+++ b/عبدالاحد_مومند.mw
@@ -24,7 +24,7 @@
 عبدالاحد مومند لومړنی افغاني ستوريونی دی. تر دې دمخه چې هغه ستوريونی شي، عبدالاحد مومند د افغانستان په هوايي پوځ کې د هواباز دنده ترسره کوله. نوموړی په ١٩٨٨ کال کې ستوريونی شو او په همدې توګه د افغانستان په وګړو کې لومړنی کس وه چې تشيال ته ولاړو. په ١٩٨٨ کال کې عبدالاحمد مومند د مير په تشيالي تمځي کې ٩ ورځې پاتې شو. له ښاغلي مومندسره په دې سفر کې [[ولاديمير لياخوف]] او ډاکتر [[واليري پولياخوف]] ملګری وو  چې د [[سويوز تی‌ام-٦]] ډلې په نامه  ياديږي .<br>په فضا کې د اوسېدو پر مهال يې  د خپل  هزواد  افغانستان  انځورونه واخيستل او په  [[اخترفيزيکي]]،‌طبي  او  چاپېريال پېژندنې په ازمايښتونو کې يې ونډه  واخيسته. په اصل کې د هغه سره پدې سفر کې د افغانستان يو بل هواباز، ښاغلی محمد دوران غلام معصوم هم تشيال ته تللی وای خو د سفر د پېل نه دمخه د محمد دوران غلام روغتيايي حالت خراب ؤ او نوموړی د اپنډکس په ناروغۍ اخته شوی وه نو ځکه د هغه سفر لغوه شو. کله چې عبدالاحد مومند د [[مير له فضايي هډې]] کې وه نو هغه د وخت  د ولسمشر [[ډاکټر نجيب الله]] سره په خپلې مورنۍ ژبې  يانې [[پښتو]] ټليفوني خبرې وکړې چې په همدې توګه پښتو  د دوو ستورو د واټن جوګه [[ژبه]] شوه.
 اوس  په [[جرمني/آلمان|جرمني]] کې  په  [[شتوتګارت]] ښار کې اوسيږي .<br> په همدې ډول محترم عبدالاحد مومند د وخت د دولت لخوا د بريد جنرالی په فوق العاده رُتبې او د افغانستان د جمهوريت د اتل په لقب ولمانځل شو. 
 
-[[Image:AbdulAhadMomand%26cosmonauts.jpg|thumb|289px|عبدالاحد مومند ولاديمير لياخوف او ډاکتر واليري پولياخوف]]
+[[انځور:AbdulAhadMomand%26cosmonauts.jpg|thumb|289px|عبدالاحد مومند ولاديمير لياخوف او ډاکتر واليري پولياخوف]]
 
 == د الوتنې تفصيل ==
 [[Image:Abdahmomand.jpg|right|thumb|200px|<font face="Tahoma">عبدالاحد مومند]]
