--- a/عبدالاحد_مومند.mw
+++ b/عبدالاحد_مومند.mw
@@ -93,12 +93,16 @@ Total Time: NA
 *[http://www.afghanland.com/history/spaceafghan.html افغانلېنډ]
 *[http://www.afghan-network.net/Culture/afghanastronaut.htm افغان نېټورک]
 
-[[Category:پښتانه]]
-[[Category:د ۱۹۵۹ زېږېدنې|عبدالاحد مومند]]
-[[Category:ژوندي خلک|عبدالاحد مومند]]
-[[Category:افغانان|عبدالاحد مومند]]
-[[Category:افغان ستوريونی|عبدالاحد مومند]]
-[[Category:د شوروي د سوسياليستي هېوادونو اتلان|عبدالاحد مومند]]
+[[وېشنيزه:پښتانه]]
+[[وېشنيزه:د ۱۹۵۹ زېږېدنې|عبدالاحد مومند]]
+[[وېشنيزه:ژوندي خلک|عبدالاحد مومند]]
+[[وېشنيزه:افغانان|عبدالاحد مومند]]
+[[وېشنيزه:افغان ستوريونی|عبدالاحد مومند]]
+[[وېشنيزه:د شوروي د سوسياليستي هېوادونو اتلان|عبدالاحد مومند]]
+
+
+
+
 
 [[ar:عبد الأحد مومند]]
 [[bg:Абдул Мохманд]]
