--- a/د_سږو_بوغمه.mw
+++ b/د_سږو_بوغمه.mw
@@ -50,7 +50,7 @@ Focus is initially on maintaining adequate oxygenation. This may happen with hig
 When circulatory causes have led to pulmonary edema, treatment with intravenous nitrates ([[Glyceryl trinitrate (pharmacology)|glyceryl trinitrate]]), and [[loop diuretic]]s, such as [[furosemide]] or [[bumetanide]], is the mainstay of therapy. These improve both preload and afterload, and aid in improving cardiac function.
 
 ==سرچينې==
-{{Reflist|2}}
+{{Reflist}}
 
 ==دا هم وګورۍ==
 *[[High Altitude Pulmonary Edema]]
