--- a/د_سږو_بوغمه.mw
+++ b/د_سږو_بوغمه.mw
@@ -4,7 +4,7 @@
 د دغې ناروغۍ نښې نښانې، د ساه لنډېدنه او د سا اخيستلو ستونزه، د ټوخي سره د وينې رابرسېرېدنه، غېرنورماله خوله، اضطراب او د جلد زېړوالی دی. د سږو د بوغمې سره يوه عامه ښکاره نښه د ګلابي رنګه بلغم راپېدا کېدل دي. که چېرته د دغې ناروغۍ درملنه په وخت سره و نه شي نو دا ناروغۍ د کوما تر کچې او آن د مړينې سبب هم ګرځي، خو دا ټول بيا د ساه اخيستنې پېچلتياؤ، لکه هايپوآکسيا يا په وينه کې د آکسيجن د کمښت سره تړلي دي. که چېرته دغه ناروغي په ورو ورو پرمختګ کړی وي، نو په ناروغ کې د مايعاتو پراړوالی (له اندازې زيات د مايعاتو ډېرښت) راڅرګندېږي. چې د همدغه ناانډولتوب په نتيجه کې ناروغ د شپې لخوا له خوبه د ميتيازو لپاره راپورته کېږي، د ناروغ بوجلکو کې بوغمه او پړسوب (پښې پړسېږې، په عامه توګه دغه ډول پړسوب ته پيټينګ بوغمه وايي، چې که چېرته د ناروغ د پښو جلد څوک په دوه ګوتو کېښکاږي او بيا ګوتې څوک ليري کړي نو جلد به په ځنډ بېرته خپلې نورمالې بڼې ته راوګرځي.) راڅرګندېږي، همدا شان اورتوپنيا يا ستوني ستخ ساه لنډي (کله چې ناروغ ستونې ستخ څملاستلی وي نو د ناروغ ساه لنډېږي او په نورماله توګه ساه نه شي اخيستلی)، او پاراوکسيمال نوکټرنال ډسپنيا يا د شپې لخوا ناڅاپي شديده ساه لنډي (په شپه کې ناڅاپي شديده ساه لنډي پېښېدل) هم څرګنده د دغې ناروغۍ څرګندې نښې نښانې دي.
 
 ==پېژندنه==
-In general, pulmonary edema is suspected due to findings in the medical history, such as previous cardiovascular disease, and [[physical examination]]: End-inspiratory [[crackles]] (sounds heard at the end of a deep breath) on auscultation (listening to the breathing through a [[stethoscope]]) are characteristic for pulmonary edema. The presence of a [[third heart sound]] (S3) is predictive of cardiogenic pulmonary edema.<ref name=Ware/>
+په يوه ناروغ باندې د سږو د بوغمې د ناروغۍ شک هغه وخت کېږي کله چې يو طبيب د هغه روغتيايي پېښليک راڅرګند کړي، لکه د ناروغ د زړه او رګونو پخوانۍ ناروغي، د ناروغ فيزيکي کتنې: د سږو د غوږکېدو پرمهال د سااخيستنې په پای کې د کراکلز (هغه غږونه چې د سږو په ناروغۍ اخته ناروغ کې د ژورې سااخيستنې وروسته په ستېتوسکوپ اورېدل کېږي) غږ شتون د سږو د بوغمې ښکارندويي کوي. د زړه د درېم غږ (S3) شتون د سږو د کارډيوجېنيکې بوغمې وړاندوينه کوي.<ref name=Ware/>
 
 In general, blood tests are performed for [[electrolyte]]s (sodium, potassium) and markers of [[renal function]] (creatinine, urea). [[Liver enzyme]]s, inflammatory markers (usually [[C-reactive protein]]) and a [[complete blood count]] as well as [[coagulation]] studies (PT, aPTT) are typically requested. [[Brain natriuretic peptide|B-type natriuretic peptide]] (BNP) is available in many hospitals, especially in the US, sometimes even as a point-of-care test. Low levels of BNP (<100 pg/ml) make a cardiac cause very unlikely.<ref name=Ware/>
 
