*Empty MediaWiki Message*

--- a/د_سږو_بوغمه.mw
+++ b/د_سږو_بوغمه.mw
@@ -66,6 +66,7 @@ When circulatory causes have led to pulmonary edema, treatment with intravenous 
 
 [[bs:Akutni edem pluća]]
 [[de:Höhenlungenödem]]
+[[en:Pulmonary edema]]
 [[es:Edema agudo de pulmón]]
 [[fr:Œdème aigu du poumon]]
 [[ko:폐부종]]
